tailwind作動するかの確認

--- a/src/posts/essay/幸福について.md
+++ b/src/posts/essay/幸福について.md
@@ -1,8 +1,7 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
 ---
-
-# 幸福について
 
 
 <span class="marginnote img-holder pb-10" >![幸福について (光文社古典新訳文庫) | Schopenhauer,Arthur, ショーペンハウアー,アルトゥール, 芳子, 鈴木 |本 | 通販  | Amazon](https://m.media-amazon.com/images/I/61CgGXGh-qL.jpg){width=45% .shadow-lg }</span>
@@ -83,7 +82,9 @@ layout: layouts/post.njk
 一方男性の名誉は，彼がすべてを与える代わりに得た唯一のもの，すなわち妻の独占すら確保し得ないことがないように見張ることである．よって男性の名誉は，妻の姦通に離別をもって罰することである．
 
 
+## 関連
 
+- [読書について](/posts/essay/読書について)
 
 
 <div class="hidden">
@@ -121,6 +122,6 @@ layout: layouts/post.njk
     
     一方，普通の人間は困苦と退屈という２つの最悪を相殺させることでしか，逃れることができない．
 
-</p>  div 
+</div> 
 
 
