--- a/src/posts/essay/私の幸福論.md
+++ b/src/posts/essay/私の幸福論.md
@@ -1,8 +1,8 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
+title : 私の幸福論
 ---
-
-# 私の幸福論
 
 <span class="marginnote img-holder pb-10" >![私の幸福論 (ちくま文庫) | 福田恆存 |本 | 通販 | Amazon](https://m.media-amazon.com/images/I/514KJPNX3XL.jpg){width=45% .shadow-lg } <span class="w-2/4 pt-3">残念ながら「あなたは**幸福**にならねばならない」とは作中のどこにも述べられていない．</span></span>
 
@@ -36,3 +36,8 @@ layout: layouts/post.njk
 ─ 今まで読んだなかで恋愛について最もまとまった文章
 
 といったものが収録されている．
+
+
+## 関連
+
+- [人間この劇的なるもの](/posts/essay/人間この劇的なるもの)
