--- a/src/posts/essay/読書について.md
+++ b/src/posts/essay/読書について.md
@@ -1,9 +1,9 @@
 ---
 layout: layouts/post.njk
 title : 読書について
+date : git Last Modified 
 ---
 
-# 読書について
 
 <span class="marginnote img-holder pb-10" >![読書について (光文社古典新訳文庫) | ショーペンハウアー, 鈴木 芳子 | 哲学・思想 | Kindleストア | Amazon](https://m.media-amazon.com/images/I/41mKVBchw8L.jpg){width=45% .shadow-lg }</span>
 
@@ -80,6 +80,10 @@ title : 読書について
 他にも『著述と文体について』で延々と続くドイツ人が書く文章への批判は笑ってしまう．ちなみにショーペンハウアー自身もドイツ人．しかし，どの批判にも論拠があって，単なる感情の表出には決してなっていない．
 
 名文，星10点．
+
+## 関連
+
+- [幸福について](/posts/essay/幸福について)
 
 
 <div class="hidden">
