--- a/src/posts/notes/トロッコ問題への回答.md
+++ b/src/posts/notes/トロッコ問題への回答.md
@@ -1,8 +1,7 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
 ---
-
-# トロッコ問題への回答
 
 ## 個人と統治
 
@@ -47,3 +46,7 @@ layout: layouts/post.njk
 ## おまけ 『統治と功利』について
 
 著書の安藤馨は法哲学者．国家制度としての功利主義がリベラリズムにとって最良の構想でありうることを主張する内容(のようだ)．難易度としては安藤の指導教官でもある井上達夫の『共生の正義』よりも難しい印象を受けた．つまりウルトラ難しいので，興味をもった人は，少なくともそっちを読んで理解できるかを確認してから買ったほうがいい．とはいっても，難しさは分析的に話が込み入っていることによるものであって，何を言っているのかよくわからないという難しさではない．
+
+## 関連
+
+- [正義論]()
