--- a/src/posts/notes/自己実現的制度としての違法薬物.md
+++ b/src/posts/notes/自己実現的制度としての違法薬物.md
@@ -1,8 +1,7 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
 ---
-
-## 自己実現的制度としての違法薬物
 
 自己実現的な制度として違法薬物を解釈してみよう．自己実現的な制度とは何かについての議論は[制度分析](/posts/比較歴史制度分析/)の項を参照．
 
@@ -64,6 +63,10 @@ layout: layouts/post.njk
 
 この印象の変化は，例えば海外で合法化が進んで，大麻業界のイメージアップ戦略が日本にも到達した場合に起こりうる．こうしたイメージ変化に伴って，大麻への否定感情が薄まれば，合法化する可能性はあるかもしれない．
 
+## 関連
+
+- [制度]()
+
 
 <div class="hidden">
     
@@ -102,4 +105,4 @@ layout: layouts/post.njk
     
     報道をさせない　規制することは不可能
 
-</p>  div 
+</div>
