--- a/src/posts/philosophy/仏教入門.md
+++ b/src/posts/philosophy/仏教入門.md
@@ -1,34 +1,69 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
+title : 仏教まとめ
 ---
 
-# 仏教まとめ
+## 縁起 -根本法則
 
-## 本論
+この世の一切の事物・現象，すなわち<stbl>[諸行](https://ja.wikipedia.org/wiki/%E8%AB%B8%E8%A1%8C%E7%84%A1%E5%B8%B8)</stbl>(サンカーラ)は因縁の和合によってつくられる．英語では諸行はconditioned things(条件付けられたもの)とも呼ばれる．このように，全ての現象は、原因や条件が相互に関係しあって成立しているものであって独立自存のものではなく、条件や原因がなくなれば結果もなくなるということを<stbl>縁起</stbl>という．
 
-この世の一切の事物・現象(諸行 サンカーラ)は因縁の和合によってつくられる．英語では諸行はconditioned thingsとも呼ばれる．このように，すべての現象は，他の現象が寄り集まったものを原因として生じること，その原因がなくなれば存在しなくなることを縁起という．
+## 三相 -縁起からの帰結
 
-諸行→  https://ja.wikipedia.org/wiki/%E8%AB%B8%E8%A1%8C%E7%84%A1%E5%B8%B8
+縁起の法則から<stbl>無常，苦，無我</stbl>の<stbl>三相</stbl>が帰結する．すなわち，
 
-無常，苦，無我の三相が縁起から帰結する．すなわち，
+<small>無常</small>
+現象は原因があるときだけ存在する一時的なものだから無常．
 
-現象は原因があるときだけ存在する一時的なものだから無常である．
+<small>苦</small>
+苦とは苦痛というよりも，unsatisfactoriness = 終わりなき不満足という意味．欲望の対象も，欲望の実現から得られる快楽も因縁によって形成された無常のものゆえに，常に不満足に終わるしかない．
 
-苦(dukkha) = unsatisfactoriness = 終わりなき不満足とは，欲望の対象も，欲望の実現から得られる快楽も因縁によって形成された無常のものゆえに，常に不満足に終わるしかない，ということである．
+<small>無我</small>
+まず，我とは何か．これには，ブッタが生きた当時に支配的な考え方であった常一主宰(アートマン)を理解する必要がある．常一主宰とは，永遠に変わらず(常)、独立的に自存し(一)、中心的な所有主として(主)、支配(コントロール)能力がある(宰)と考えられる霊魂的或いは本体的実在を意味する．これこそブッタが否定した我である．例えば身体が我なら，それは「このようであれ，このようであってはならない」と命じコントロールできるはずだが，そうはできず，勝手に病み老いる．同様に我々が知るすべてのものは思い通りにはならない．
 
-最後に無我．まず，我とは何か．これには，ブッタが生きた当時に支配的な考え方であった常一主宰(アートマン)を理解する必要がある．常一主宰とは，永遠に変わらず(常)、独立的に自存し(一)、中心的な所有主として(主)、支配(コントロール)能力がある(宰)と考えられる霊魂的或いは本体的実在を意味する。これこそブッタが否定した我である．例えば身体が我なら，それは「このようであれ，このようであってはならない」と命じコントロールできるはずだが，そうはできず，勝手に病み老いる．同様に我々が知るすべてのものは思い通りにはならない．しかし，我々は自分が求めることを行う自由な行為者ではなかったのか．否，我々が自由と読んでいるものは傾向性・癖にすぎない．心にふと思い浮かんだ「これをしたい」という欲求・衝動に従ってこれを実現することは自由ではない．というのも欲望は勝手にやってくるもので，自分で思い浮かばせているわけではないし，勝手に去っていくので，保持することもできない．だからこそ，これらの欲望のまま行動することは，自由ではないし，終わりなき不満足である苦につながる．(ただしブッタは身の回りのものはすべて我ではない(非我)としたのであって，我はどこにもないという意味での無我は説いていない．我がどこかに存在するのか，どこにも存在しないのかについて彼は沈黙した．私たちが見知るものはどれも我ではないということが知りうることであり重要なことである．)
+しかし，我々は自分が求めることを行う自由な行為者ではなかったのか．否，我々が自由と読んでいるものは傾向性・癖にすぎない．心にふと思い浮かんだ「これをしたい」という欲求・衝動に従ってこれを実現することは自由ではない．というのも欲望は勝手にやって来て，勝手に去っていくものだから．つまり，欲望は，自分で思い浮かばせているわけではないし，保持することもできない．だからこそ，これらの欲望のまま行動することは，自由ではないし，終わりなき不満足である苦につながる．<marginnote>ただしブッタは身の回りのものはすべて我ではない(非我)としたのであって，我はどこにもないという意味での無我は説いていない．「我がどこかに存在するのか，もしくは，どこにも存在しないのか」という問いにブッタは沈黙した．悟りのためには，私たちが見知ったものはどれも我ではなかったということが重要である．</marginnote>
+
+## 四諦 -4つの聖なる真理
 
 こうしてブッタは四諦を説く．四諦は**苦諦**、**集諦**、**滅諦**、**道諦**からなる．
 
-まず，この世の一切が苦である(苦諦)(cf.四苦八苦)．苦の原因は渇愛である(集諦)．渇愛は浴愛(感官によって得られる刺激・快楽への渇愛)，有愛(存在することへの渇愛)，非有愛(存在しなくなることへの渇愛)の3つからなる． 苦の原因である渇愛を滅することが悟りである(滅諦)．悟りに至るためには八正道の実践を行うべきである(道諦)．
+- この世の一切が苦である(苦諦)(cf.四苦八苦)
+- 苦の原因は渇愛である(集諦) 
+- 苦の原因である渇愛を滅することが悟りである(滅諦)
+- 悟りに至るためには八正道の実践を行うべきである(道諦)
 
-渇愛👇
+[渇愛](https://ja.wikipedia.org/wiki/%E6%B8%87%E6%84%9B_(%E4%BB%8F%E6%95%99))は以下の3つからなる．
 
-https://ja.wikipedia.org/wiki/%E6%B8%87%E6%84%9B_(%E4%BB%8F%E6%95%99)
+- 感官によって得られる刺激・快楽への愛(浴愛)
+- 存在することへの愛(有愛)
+- 存在しなくなることへの愛(非有愛
 
-悟る=渇愛を滅するためにはどうすればいいか．そのためには渇愛がいかにして発生するのかを知る必要がある．それを記したのが十二因縁(The twelve nidanas)である．
+## 十二因縁 -渇愛はいかに生じるか
+
+悟る，すなわち渇愛を滅するためにはどうすればいいか．そのためには渇愛がいかにして発生するのかを知る必要がある．それを記したのが十二因縁(The twelve nidanas)である．
+
+| 十二因縁| 意味 |
+| ------ | ----------- |
+| 無明  | 無知 |
+| 行 | 諸行，業 |
+| 識    | 識別作用，差別の元 |
+| 名色 | 名称と形態 | 
+|六処|6つの感覚器官|
+|触|対象との接触|
+|受|六処と触による感受作用|
+|愛|渇愛|
+|取|執着|
+|有|存在|
+|生|生まれること|
+|老死|老いと死|
+
+
+
+<div class="hidden">
 
 https://en.wikipedia.org/wiki/Prat%C4%ABtyasamutp%C4%81da#:~:text=Lists%20of%20nidanas-,The%20twelve%20nidanas,-The%20popular%20listing
+
+
 
 識(Consciousness *(vinnana*)),
 
@@ -42,51 +77,62 @@ https://en.wikipedia.org/wiki/Prat%C4%ABtyasamutp%C4%81da#:~:text=Lists%20of%20n
 
 ![twelve](twelve.png)
 
+</div>
+
 根本には無明すなわち真理に対する無知がある．
 
-次に行(諸行と同じ)．私たちは縁起の一部であり，過去に積み重ねられてきた業(karma)の結果として存在している．それゆえ私たちには，無数の行為の反復によって形成された行動と認知のパターン(=傾向性・癖)が身についている．その癖による心の働きが煩悩，有漏(ウロウロするの語源)である．
+次に行(諸行と同じ)．私たちは縁起の一部であり，過去に積み重ねられてきた業(karma)の結果として存在している．それゆえ私たちには，無数の行為の反復によって形成された行動と認知のパターン(=傾向性・癖)が身についている．その癖による心の働きが煩悩，有漏<sidenote-number></sidenote-number><sidenote>ウロウロするの語源</sidenote>である．
 
 経典いわく
 
 *衆生とは業を自らのものとし，業の相続者であり，業を母胎とし，業を親族として，業を拠りどころとするものである*
 
-私たちは業に条件付けられてものごとを分類することで感情，認識，意思，触がうまれる(識,名色).
-
-識 →　https://ja.wikipedia.org/wiki/%E8%AD%98
-
-名色 →　https://www.wikiwand.com/ja/%E5%90%8D%E8%89%B2
+私たちは業に条件付けられてものごとを分類する([識](https://ja.wikipedia.org/wiki/%E8%AD%98))．こうして感情，認識，意思，触がうまれる([名色](https://www.wikiwand.com/ja/%E5%90%8D%E8%89%B2)).逆に識が滅せられると，名色も停止する．
 
 感覚器官(処)と認識(識)の接触(触)によって，感情・感覚(受)が生じ，渇愛(愛)に至る．
 
-![CleanShot 2023-01-15 at 12.42.33@2x](CleanShot 2023-01-15 at 12.42.33@2x.png)
+![](/img/六六経-wikipedia.png)
+[wikipedia](https://ja.wikipedia.org/wiki/%E8%AD%98?useskin=vector#:~:text=%E3%82%92%E3%82%82%E3%81%9F%E3%82%89%E3%81%99%E3%81%A8%E3%81%84%E3%81%86%E3%80%82-,%E6%84%9F%E8%A6%9A%E5%99%A8%E3%81%A8%E3%81%97%E3%81%A6%E3%81%AE%E8%AD%98,-%E3%83%91%E3%83%BC%E3%83%AA%E7%B5%8C%E5%85%B8)より引用
 
 十二因縁のうち，無明・行はすでに取り返しがつかない．識が変えうる根本である．
 
-私たちは業に依って，本来分別されていないものに対して，分別化を与えてしまう．例えば，美しい顔というのは，感覚器官に入ってくる色の組み合わせを素材として作られたイメージであって，そのイメージの構成の仕方を変えれば，ブッタが示したように美しい娘を「糞や尿で満ちた女」と呼ぶこともできる． (cf.戯論(Conceptual proliferation))https://en.wikipedia.org/wiki/Conceptual_proliferation
+私たちは業に依って，本来分別されていないものに対して，分別化を与えてしまう．<marginnote>戯論([Conceptual proliferation](https://en.wikipedia.org/wiki/Conceptual_proliferation))も参照</marginnote>例えば，美しい顔というのは，感覚器官に入ってくる色の組み合わせを素材として作られたイメージにすぎない．そのイメージの構成の仕方を変えれば，ブッタが示したように美しい娘を「糞や尿で満ちた女」と呼ぶこともできる． 
 
-このような業に条件付けられた分別化をやめることで，渇愛を滅し悟りに至るができる．それは言語・概念を介さない純粋な認知の状態であり，そこでは「ある・ない」というような二分法はなくなり，縁起の生成消滅もなくなり，不生不滅に至る．もちろん，認知自体がなくなる(例えば，目が見えなくなったり聞こえなくなったりする)わけではない．
+このような業に条件付けられた分別化をやめることで，渇愛を滅し悟りに至るができる．それは言語・概念を介さない純粋な認知の状態であり，そこでは「ある・ない」というような二分法はなくなる．それゆえ，縁起の生成消滅もなくなり，不生不滅に至る．<marginnote>といっても，もちろん，認知自体がなくなる(例えば，目が見えなくなったり聞こえなくなったりする)わけではない．</marginnote>
 
-悟りには意思や理性による思考では至ることはできない．智慧が必要なのだ．智慧とは体験・経験によって得られる気づきである．言葉で「この世界は自分がつくりあげた物語に過ぎない」といくら言っても，それで体験する感情や情動を変えることはできない．智慧の獲得=悟りは，ある瞬間におこる実存のありかたの転換であって，推論を超えて直接的に知られるものである．
+意思や理性による思考で悟りに至ることはできない．智慧，すなわち体験・経験によって得られる気づきが必要なのだ．「この世界は自分がつくりあげた物語に過ぎない」といくら言葉で唱えても，それで体験する感情や情動を変えることはできない．智慧の獲得=悟りは，ある瞬間におこる実存のありかたの転換であって，推論を超えて直接的に知られるものである．
 
-だから，悟りに至るための八正道は8つの方法論であり，実践論である．その1つである正念(mindfulness)は内外の状況に執着あるいは嫌悪などの価値判断を加えることなく気づき注意を払った状態でいるという瞑想の基本的な技術の一つである．(この気づきは智慧の気づきとは違う．マインドフルでいることは智慧に至るための方法の1つである．例えば，自分が対象に欲望を抱いていれば，その欲望があると気づき，欲望を抱いていなければ，その欲望がない，と気づくことはマインドフルだが，知恵を得て悟りに至れば，そのような欲望は消滅する(あるともないともいえなくなる))
+## 八正道 -智慧を得るための方法論
 
-悟りは涅槃(nirvāṇa（ニルヴァーナ)(煩悩の滅尽),解脱(輪廻からの離脱), 不生(縁起による生成消滅の超越),無為(特定の因縁を超えた不生不滅の存在),到彼岸(生死にさまよう此岸から彼岸である涅槃に至ること)とも呼ばれる．
+だから，悟りに至るための八正道は8つの方法論であり，実践論である．その1つ1つはwikipediaを参照してほしいが，例えば正念(mindfulness)は内外の状況に執着あるいは嫌悪などの価値判断を加えることなく気づき<sidenote-number></sidenote-number><sidenote>この気づきは智慧の気づきとは違う．マインドフルでいることは智慧に至るための方法の1つである．例えば，自分が対象に欲望を抱いていれば，その欲望があると気づき，欲望を抱いていなければ，その欲望がない，と気づくことはマインドフルだが，知恵を得て悟りに至れば，そのような欲望は消滅する(あるともないともいえなくなる)</sidenote>，注意を払った状態でいるという瞑想の基本的な技術の一つである．
+
+## 悟りのいろいろな名前
+
+悟りは
+
+- 涅槃(nirvāṇa ニルヴァーナ)(煩悩の滅尽)
+- 解脱(輪廻からの離脱)
+- 不生(縁起による生成消滅の超越)
+- [無為](https://ja.wikipedia.org/wiki/%E7%84%A1%E7%82%BA_(%E4%BB%8F%E6%95%99))(特定の因縁を超えた不生不滅の存在)
+- 到彼岸(生死にさまよう此岸から彼岸である涅槃に至ること)
+
+とも呼ばれる．
 
 ## 輪廻転生について
 
-感覚からの情報が認知され経験が成立する場のことを経験我と呼ぼう．凡夫はそこに，固定的・実体的な私=常一主宰があると思い込み執着するが，経験我も原因・条件によって生成消滅する縁起のものだから，無常であり苦であり，無我である．
+感覚からの情報が認知され経験が成立する場のことを経験我と呼ぼう．凡夫はそこに，固定的・実体的な私=常一主宰があると思い込み執着するが，経験我も原因・条件によって生成消滅する縁起のものだから，無常であり，苦であり，無我である．
 
 輪廻とは経験我の業の連鎖である．経験我は縁起によるものだから，私とも他者とも名付けることができず，ただその場その場の認知のまとまりである．その認知のまとまりの相互作用，ある経験我の業が，別の経験我をうむという連鎖が続くことが輪廻である．ある衆生の死後には，その作用が新たな認知のまとまりをつくるだろう．これが転生である．
 
-ちなみに悟った後にも経験我は残るとされる．
+ちなみに悟った後にも経験我は残るとされる．それゆえ，悟ったからといって，経験が成立する認知の場がなくなるわけではない．
 
-## 律について
+## その他の補足
 
-解脱・涅槃の境地に至れば，世俗的な意味での善悪は捨て去られる．だから仏教の価値の枠組みから俗世の倫理規範を導くことはできない．とはいっても，労働も生殖も行わない無産者である僧が修業を続けるためには，社会の在家者に，この人にならお布施してもいい，と思ってもらうような行動を取る必要がある．それをまとめたマニュアルが律である．例えば，ブッダは両親の許可なしに出家をすることを禁止とした．これは涅槃のために必要だからというわけではなく，そのようなことが続けば，社会からの支援が得られなくなるからである．涅槃を究極の目的として，それ以外のことは社会との軋轢を生まないために適当に合わせておく，という柔軟な姿勢が，無産者の集団が人々の善意に依存しながら，善悪を捨て去った境地を追求するという奇跡的な制度を2500年もの間維持することを可能にした．
+### 律について
 
+解脱・涅槃の境地に至れば，世俗的な意味での善悪は捨て去られる．だから仏教の価値の枠組みから俗世の倫理規範を導くことはできない．とはいっても，労働も生殖も行わない無産者である僧が修業を続けるためには，社会の在家者に，この人にならお布施してもいい，と思ってもらうような行動を取る必要がある．それをまとめたマニュアルが律である．例えば，ブッダは両親の許可なしに出家をすることを禁止とした．これは智慧を得るために必要だからというわけではなく，そのようなことが続けば，社会からの支援が得られなくなるからである．涅槃を究極の目的として，それ以外のことは社会との軋轢を生まないために適当に合わせておく，という柔軟な姿勢をとることで，無産者の集団が人々の善意に依存しながら，善悪を捨て去った境地を追求するという奇跡的な制度を2500年もの間維持することができた．
 
-
-## 中道について
+### 中道について
 
 中道には実践的な意味での中道と，哲学的な意味での中道がある．
 
@@ -102,19 +148,21 @@ https://en.wikipedia.org/wiki/Prat%C4%ABtyasamutp%C4%81da#:~:text=Lists%20of%20n
 
 ## 参考文献
 
-仏教思想のゼロポイント
+- 仏教思想のゼロポイント
+- [分別と戯論(公開pdf)](https://core.ac.uk/download/pdf/267909687.pdf)
 
-https://core.ac.uk/download/pdf/267909687.pdf
+## 関連
+
+- [幸福について]()
+- 認知行動療法(ACT)
+- [いろいろな詩]()
 
 
 
 
-
-
-
+<div class="hidden">
+    
 # ボツ
-
-
 
 諸行(**サンカーラ**(Saṅkhāra) ) = conditioned things, phenomena　因縁の和合によってつくられる、この世の一切の事物・現象
 
@@ -140,11 +188,11 @@ https://ja.wikipedia.org/wiki/%E8%AB%B8%E8%A1%8C%E7%84%A1%E5%B8%B8
 
 
 
-## 2 
+# 2 
 
 凡夫が経験する現象はすべて原因によって形成された一時的なものであり，原因が寄り集まっておこるものであり(samudaya-dhamma)，その原因がなくなれば消滅する．これが縁起 p.47
 
- 無常であることはいうまでもない．
+    無常であることはいうまでもない．
 
 欲望の対象も，欲望の実現から得られる快楽も因縁によって形成された無常のものだから，常に不満足に終わるしかない．それが苦である．人生一〇〇年だけの話であれば「人生は死ぬまで暇つぶし」とごまかせても，輪廻転生によって，何度も生まれ死に続ける無数の生涯を，終わりなき不満足の反復として無益に消費し続けることになる．
 
@@ -168,7 +216,7 @@ The cycle of rebirth is determined by karma, literally 'action'.[69][note 1] Kar
 
 In the Buddhist tradition, karma refers to actions driven by intention (cetanā),[82][83][77][note 2] a deed done deliberately through body, speech or mind, which leads to future consequences.
 
-## 3
+# 3
 
 
 
@@ -201,3 +249,5 @@ In the Buddhist tradition, karma refers to actions driven by intention (cetanā)
 
 輪廻とは経験我の業の連鎖である．経験我は縁起によるものだから，私とも他者とも名付けることができず，ただその場その場の認知のまとまりである．その認知のまとまりの相互作用，ある経験我の業が，別の経験我をうむという連鎖が続くことが輪廻である．ある衆生の死後には，その作用が新たな認知のまとまりをつくるだろう．これが転生である．
 
+
+</div>
