--- a/src/posts/philosophy/哲学入門2-認識行為.md
+++ b/src/posts/philosophy/哲学入門2-認識行為.md
@@ -1,5 +1,6 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
 ---
 
 ここでは現代哲学の主要なテーマである，言語論・行為論・認識論のうち，行為論と認識論を紹介し，その過程で，哲学の基本的な手法である概念分析とは何かを知識分析を通して理解し，最終的に哲学とはどういう営みなのかを考えたい．(言語については論理学を扱う項で部分的に扱う．言語論に興味がある人は『言語哲学大全1』がオススメ．1以外は読んでいません．)
