--- a/src/posts/歴史とは何か.md
+++ b/src/posts/歴史とは何か.md
@@ -2,15 +2,8 @@
 layout: layouts/post.njk
 created : 2023-01-18 15:01:05 +9
 date : git Last Modified 
+title : 歴史とは何か
 ---
-
-
-# 歴史とは何か  <span class="text-base pl-4">E.H.カー</span> 
-
-<div class="max-xl:pb-4 text-gray-600 text-[14px] leading-[26px] ">
-    <div class="text-right" style="font-family : sans-serif"> <span>作成:</span> {{created | htmlDateString }} </div>
-    <div class="text-right" style="font-family : sans-serif"> <span>更新:</span> {{page.date | htmlDateString }} </div>
-</div>    
 
 
 
