--- a/src/posts/猫の大虐殺.md
+++ b/src/posts/猫の大虐殺.md
@@ -1,36 +1,42 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
 ---
-
-# 猫の大虐殺
+<link rel="stylesheet" href="https://unpkg.com/treeflex/dist/css/treeflex.css">
 
 <span class="marginnote img-holder pb-10" >![猫の大虐殺 | ロバート ダーントン, 真夫, 海保, 洋一, 鷲見 |本 | 通販 | Amazon](https://m.media-amazon.com/images/I/41sUBa0fxZL.jpg){width=45% .shadow-lg }</span >
 
 ## 本書の目的意識
 
-この本は，過去の記録から，その当時の人々のものの考え方を追求する．つまり人々が自己の世界をどう解釈し，どう意味を与え，どう感情を注いだのかを知ろうとする．
+この本は，過去の記録から，人々のものの考え方を追求する．つまりその当時の人々が自己の世界をどう解釈し，どう意味を与え，どう感情を注いだのかを知ろうとする．
 
-哲学者であれ一般人であれ，人々にはある世界観があり，それに従って現実を秩序立てている．たしかに一般人が抽象命題を弄ぶことはないが，具体的な事物や，民話や儀式といった文化が提供するものを相手に彼らは思考しているのだ．
+哲学者であれ一般人であれ，人々にはある世界観があり，それに従って現実を秩序立てている．たしかに一般人が抽象命題を弄ぶことはないが，具体的な事物や，民話や儀式といった文化が提供するものを相手に彼らは思考している．
 
-そして，その思考の方法や感情の分類の仕方は，自身の属する文化が提供する枠内に制限されている．しかし彼らはその枠内にありながらも語義の境界線を様々にテストして入れ替え，概念を巧みに操作するのだ．この観点から，ディドロやルソーが抱えた問題は，民話の語り手である農民や猫の虐殺に興じる職人の問題と同列に扱われる．
+思考の方法や感情の分類の仕方は，自身の属する文化が提供する枠内に制限されている．しかし，彼らはその枠内にありながらも語義の境界線を様々にテストして入れ替え，概念を巧みに操作するのだ．この観点から，ディドロやルソーが抱えた問題は，民話の語り手である農民や猫の虐殺に興じる職人の問題と同列に扱われる．
 
 こうして猫の大虐殺の目次は次のとおりとなる．
 
+1. 農民は民話をとおして告げ口する—マザー・グースの意味
+2. 労働者の叛乱—サン・セヴラン街の猫の大虐殺
+3. ブルジョアは自分の都市をどのように観察していたか
+4. 作家の身上書類を整理する一警部—フランス文壇の分析 
+5. 知識の系統樹を刈り整える哲学者たち―『百科全書』の認識論的戦略
+6. 読者がルソーに応える—ロマンティックな多感性の形成
 
 
-いずれの章においても，文化的制限の元での，もしくは制限を逆に利用した概念操作に焦点は当てられている．
+いずれの章においても，ある文化的制限の元での，もしくは制限を逆に利用した概念操作に焦点が当てられている．猫の大虐殺という表題の内容は第2章に割り当てられている．
 
-とくにわかりやすい例として『知識の系統樹を刈り整える哲学者たち ―『百科全書』の認識論的戦略―』を見ていこう．
+とくにわかりやすい例として第5章『知識の系統樹を刈り整える哲学者たち ―『百科全書』の認識論的戦略―』を見ていこう．
 
 ## 『知識の系統樹』要旨
 
-ディドロとダランベールは『百科全書』で何をしたのか？
+ディドロとダランベールは『[百科全書](https://www.y-history.net/appendix/wh1003-039.html)』で何をしたのか？
 
 知識の中心を哲学とすることで，知識概念を改定し，それによって，知識を聖職者から啓蒙主義者の手にうつすことである．
 
-概念は恣意的である．例えば恣意性については，ミシェル・フーコーが『言葉と物』で論じている中国の百科辞典の例を考えよう．
+概念は恣意的である．その例として，ミシェル・フーコーが『言葉と物』で論じている古代中国の百科辞典による動物の分類を考えよう．
 
-<div class="italic">
+<div class="italic text-[18px] leading-[21px] pb-6 pt-6">
     
 動物は次のごとく分けられる。
 
@@ -51,48 +57,184 @@ layout: layouts/post.njk
 
 </div>
 
-このように恣意的であるにも関わらず我々は概念カテゴリーを自明のものとして普通疑わない．それは概念は思考するよりも前に我々に与えられたものであり，概念なしに考えることはできないからである．それゆえ概念とは，ある時代・地域に独特の，思考を方向づけるある種の枠のようなものだと言える．
-これをフーコーはエピステーメーと呼んだ．
+これと同様に現在我々が自明のものと思っている分類分けも時代地域が異なれば異様に見えることがあり得る．しかし，このような恣意的にも関わらず我々は概念カテゴリーを自明のものとして普通疑わない．それは概念は思考するよりも前に我々に与えられたものであり，概念なしに考えることはできないからである．それゆえ概念とは，ある時代・地域に独特の，思考を方向づけるある種の枠のようなものだと言える．これをフーコーはエピステーメーと呼んだ．
 
 *＜エピステメー＞なる用語によってわれわれの解するのは、或る与えられた時代において、諸々の認識論的形象、科学、そしてときには形式化されたシステムを生み出すさまざまな言説＝実践を統一する諸連関の総体である。*
 
-知識は聖職者に属するものであった．しかし彼らは秩序づけは恣意的であることを自覚していた．それは彼らがあたらしい秩序を世界に押し付けようとしていたからである．
+『百科全書』が出版される以前の時代，18世紀前半は知識は聖職者に属するものであった．しかしディドロやダランベールは，その秩序づけが恣意的であることを自覚していた．それは彼らがあたらしい秩序を世界に押し付けようとしていたからでもある．
 
 具体的には彼らが百科全書をつくるモチベーションとなったチェインバーズの『百科全書』では知識の系統樹は次のようになる．
 
-しかしこれでは人間の技術・芸術と学問が人間の理性から生じるものだということがわからない．しかも，ディドロが軽視したい形而上学と宗教が，肩入れしたい数学・自然学と対等になっている．
+
+
+<div class="tf-tree tf-gap-l">
+  <ul>
+    <li>
+      <span class="tf-nc">知識</span>
+      <ul>
+        <li><span class="tf-nc">人為的技術的知識</span></li>
+        <li>
+          <span class="tf-nc">自然的理論的知識</span>
+          <ul>
+            <li><span class="tf-nc">感覚によるもの</span></li>
+            <li>
+                <span class="tf-nc">理性によるもの</span>
+                <ul>
+                <li>
+                    <span class="tf-nc">宗教</span>
+                    <ul>
+                    <li><span class="tf-nc">倫理学</span></li>
+                    <li><span class="tf-nc">神学</span></li>
+                    </ul>
+                </li>
+                <li><span class="tf-nc">純粋数学</span></li>
+                <li><span class="tf-nc">形而上学</span></li>
+                <li><span class="tf-nc">自然学</span></li>
+                </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
+
+
+しかしこれでは人間の技術・芸術と学問が人間の理性から生じるものであることが分からない．しかも，ディドロが軽視したい形而上学と宗教が，肩入れしたい数学・自然学と対等になっている．
 
 そこで彼らは尊敬するベーコンにならうことにした．ベーコンの分類はおおまかには次の通り．
 
+<marginnote>分類は話に関わるところだけを省略して載せている．例えば人間に関する哲学には，他にも弁論術や統治，交渉，善の本性などがふくまれる</marginnote>
+<div class="tf-tree tf-gap-l">
+  <ul>
+    <li>
+      <span class="tf-nc">知識</span>
+      <ul>
+        <li>
+            <span class="tf-nc bg-rose-300">神の啓示による学問</span>
+            <ul>
+            <li><span class="tf-nc">神の本性</span></li>
+            <li><span class="tf-nc">道徳律，自然法</span></li>
+            <li><span class="tf-nc">聖書の体系的解釈</span></li>
+            </ul>
+        </li>
+        <li>
+          <span class="tf-nc bg-yellow-300">人間の知力による学問</span>
+          <ul>
+            <li><span class="tf-nc bg-lime-300">記憶(歴史)</span></li>
+            <li><span class="tf-nc bg-orange-300">想像力(詩)</span></li>
+            <li>
+                <span class="tf-nc bg-blue-300">理性(哲学)</span>
+                <ul>
+                    <li><span class="tf-nc">神に関する哲学</span>
+                    <ul><li><span class="tf-nc bg-teal-300">自然神学</span></ul>
+                    </li>
+                    <li>
+                    <span class="tf-nc">人間に関する哲学</span>
+                    <ul>
+                    <li><span class="tf-nc bg-purple-300">占い，魅惑</span></li>
+                    </ul>
+                    </li>
+                    <li>
+                    <span class="tf-nc">自然に関する哲学</span>
+                    <ul>
+                    <li><span class="tf-nc">理論的知識</span></li>
+                    <li><span class="tf-nc">実践的知識</span></li>
+                    </ul>
+                    </li>
+                </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
+
 そして最終的な彼らの分類は次の通り．
 
-彼らの分類はベーコンの分類と似ている．実際彼らは自分たちの系統樹はベーコンのものをなぞっただけだと言って，本当の意図を隠そうとした．																																																																																																																																																																
+<marginnote>同じく分類は話に関わるところだけを省略して載せている．例えば想像力(詩)には物語詩，音楽，絵画，彫刻，建築など芸術一般が含まれる．</marginnote>
+<div class="tf-tree tf-gap-l">
+  <ul>
+    <li>
+      <span class="tf-nc">知識</span>
+      <ul>
+      <li><span class="tf-nc bg-yellow-300">悟性</span>
+          <ul>
+            <li><span class="tf-nc  bg-lime-300">記憶(歴史)</span></li>
+            <li><span class="tf-nc bg-orange-300">想像力(詩)</span></li>
+            <li>
+                <span class="tf-nc bg-blue-300">理性(哲学)</span>
+                <ul>
+                    <li>
+                    <span class="tf-nc">神についての学問</span>
+                    <ul>
+                    <li><span class="tf-nc">宗教(およびその誤用から生じる)迷信</span>
+                        <ul>
+                        <li><span class="tf-nc bg-rose-300">啓示神学</span></li>
+                        <li><span class="tf-nc bg-teal-300">自然神学</span></li>
+                        </ul>
+                    </li>
+                    <li><span class="tf-nc bg-purple-300">占い，妖術</span></li>
+                    </ul>
+                    </li>
+                    <li>
+                    <span class="tf-nc">人間についての学問</span>
+                    </li>
+                    <li>
+                    <span class="tf-nc">自然についての学問</span>
+                    <ul>
+                    <li><span class="tf-nc">特殊物理学</span></li>
+                    <li><span class="tf-nc">数学</span></li>
+                    <li><span class="tf-nc">一般物理学</span></li>
+                    </ul>
+                    </li>
+                </ul>
+            </li>
+          </ul>
+      </li>
+      </ul>
+    </li>
+  </ul>
+</div>
 
-決定的に違う点は啓示神学の扱いである．ベーコンは自然神学のみを哲学の中に含め，それを不十分なものとした．自然現象の観測から出発し，そこに神の意図を見出して，帰納的に神の存在を証明する自然神学の論法では真のキリスト教の神の認識は得られないとベーコンは考えていた．彼にとって帰納法には限界があった．だから啓示神学は自然神学とは別の樹とし，人間の知識を知力と啓示による2本に分けたのだ．
+彼らの分類はベーコンの分類と似ている．実際彼らは自分たちの知識の系統樹はベーコンのものをなぞっただけだと言って，本当の意図を隠そうとした．																														
+
+しかし，両者には決定的に違う点がある．それは神学の扱いである．ベーコンは神学のうち，彼が不十分だと考えた自然神学のみを哲学 <sidenote-number></sidenote-number><sidenote>この時代には哲学は現代のような個別の学問領域と言うよりは知的探求・学問全般を指す言葉だったことに注意</sidenote>の中に含めた．自然神学では，自然現象の観測から出発し，そこに神の意図を見出して，帰納的に神の存在が証明される．この論法では真のキリスト教の神の認識は得られないとベーコンは考えていた．彼にとって帰納法には限界があった．だから啓示神学は自然神学とは別の樹とし，人間の知識を知力と啓示による2本に分けたのだ．
 
 この考えほどディドロとダランベールから隔たったものはない．彼らは啓示は疑いようもない事実なので，他の全てと同じように理性に従わせることができると考えた．
 
 「*したがって，(ベーコンのように)神学を哲学から分離することは，もともと幹についている若枝を幹からむしりとるようなものである」*
 
-彼らは啓示を哲学に含めることで，自然現象の観察によってもたらされる感覚と思索からうまれる知識が知識のすべてであると宣言したのである．そして自然神学は宗教と等置されるが，啓示神学の周りには，迷信・占い・妖怪・善や悪の霊についての学問といった項目が置かれる．ものごとの位置づけだけでメッセージを伝えているのだ．
+彼らは啓示神学までも哲学に含めることで，自然現象の観察によってもたらされる感覚と思索からうまれる知識が知識のすべてであると宣言した．そして自然神学は宗教と等置されるが，啓示神学の周りには，迷信・占い・妖怪・善や悪の霊についての学問といった項目が置かれる．ものごとの位置づけだけでメッセージは伝えられている．
 
-最後にダランベールは歴史的論証によってこの仕事を終える．すなわち，まず彼は歴史を文明の勝利，文明を文人の所産と定義する．そして，次にベーコンを起源とするデカルトやニュートンなどの思想家たちは，迫害され軽蔑されながらも，未来の世代の知性のために戦った，という偉人伝風の歴史展望を展開する．偉人には本物の戦争を行った将軍たちもいることをダランベールは認めるが，彼の書きぶりでは知性の歴史以外に歴史はないように見える．そして啓蒙思想家こそ，その後継者なのである．
+最後にダランベールは歴史的論証によってこの仕事を終える．すなわち，まず彼は歴史を文明の勝利，文明を文人の所産と定義する．そして，次にベーコンを起源とするデカルトやニュートンなどの思想家たちは，迫害され軽蔑されながらも，未来の世代の知性のために戦った，という偉人伝風の歴史展望を展開する．偉人には本物の戦争をした将軍たちがいることをダランベールは認めるが，彼の書きぶりは知性の歴史以外に歴史はないというほどである．そして啓蒙思想家こそ，文人の後継者なのである．
 
-こうして啓蒙思想家以外に正当な文人=歴史の担い手はいなくなる．
+この「歴史は文明の勝利，文明は文人の所産，歴代の偉大な文人の後継者は啓蒙思想家」というロジックにより啓蒙思想家こそが正当な歴史の担い手となる．
 
-『百科全書』においてディドロとダランベールは，まず知識の系統樹を整理することで経験的基礎をもたない知識を排除し，哲学を中心に置く．すなわち教会が説く教義を追い出し，知識の中心に哲学をおく．そして知識概念の創造者は過去にも未来にも啓蒙主義者であることを宣言するのだ．
-
-
+『百科全書』においてディドロとダランベールは，まず知識の系統樹を整理することで経験的基礎をもたない知識，教会が説く教義を排除し，哲学を中心に置く．そして知識概念の創造者は過去にも未来にも啓蒙主義者であることを宣言するのだ．
 
 ## 感想
 
-価値は素材ではなく表現形式に宿る．『猫の大虐殺』(原題もそのままでthe great cat massacre)はタイトルだけ見ると，過去にあった珍しい事件について取り扱った素材重視の本(こんな事件があったんですよ，ふーん，だから何？みたいな)に見えるが，そうではない．主眼は，史料として残ったさまざまな事件・文書の意義は概念の操作・改変にあること，概念の操作・改変を一般人でも知識人でも(意識的，無意識的に)同じように行っていたこと，を複数の具体例を通して主張することにある．
+価値は素材ではなく表現形式に宿る<sidenote-number></sidenote-number><sidenote>[読書について](/posts/essay/読書について)</sidenote>．『猫の大虐殺』<sidenote-number></sidenote-number><sidenote>原題もそのままでthe great cat massacre</sidenote>はタイトルだけ見ると，過去にあった珍しい事件について取り扱った素材重視の本<sidenote-number></sidenote-number><sidenote>こんな事件があったんですよ，ふーん，だから何？みたいな</sidenote>にも見えるが，そうではない．この本の主眼は，史料として残ったさまざまな事件・文書をもとに
 
-この意味で概念工学に通じるものがあるので，そちらもぜひ見てほしい．
+- 概念の操作・改変を意識的であれ，無意識的であれ一般人・知識人が同じように行っていたこと
+- それこそが活動の中心，意義であること
 
-どの章でも史料を丁寧に読み解くことで何がいえるのかを考えていくスタイルになっているので，ダーントンの解釈がテキストから妥当か否かを考えながら読むことができる．一般向けの歴史書は，もとの史料に何が書いてあったか詳しく精読することはほとんどなく，解釈の結果と注で出典が述べられるくらいだが，そういう既成のストーリーを聞かされることに飽きてきたらこの本を非常にオススメする．文章はとても読みやすいし，各章(それぞれ50p前後で1,2時間あれば読める)を独立して読んで問題ない．
+を複数の具体例を通して主張することにある．
 
-岩波現代文庫版ではここで紹介したディドロの第5章と第3章が削除されているので，買うとしたら岩波書店版を買うのがいいと思う．特にディドロの第5章では紹介の通り概念改変の具体的なプロセスが最もわかりやすく示されているから．しかしどちらも絶版で中古品の流通も少ない．
+この意味で概念工学<sidenote-number></sidenote-number><sidenote>[哲学入門2]()を参照</sidenote>に通じるものがあるので，そちらもぜひ見てほしい．
+
+どの章でも史料を丁寧に読み解くことで何がいえるのかを考えていくスタイルになっているので，ダーントンの解釈がテキストから妥当か否かを考えながら読むことができる．一般向けの歴史書は，もとの史料に何が書いてあったか詳しく精読することはないまま，解釈の結果が与えられ，注で出典が述べられるくらいだが，そういう既成のストーリーを聞かされることに飽きてきたらこの本を非常にオススメする．文章はとても読みやすいし，なんのために書かれたのか？というここでまとめた目的意識がはっきり理解できていれば，各章<sidenote-number></sidenote-number><sidenote>それぞれ50p前後で1,2時間あれば読める</sidenote>を独立して読んで問題ない．
+
+岩波現代文庫版ではここで紹介したディドロの第5章と第3章が削除されているので，買うとしたら岩波書店版を買うのがいいと思う．特にディドロの第5章では紹介したように概念改変の具体的なプロセスが最もわかりやすく示されている章で，ぜひ読んでほしい．
+
+
+## 関連
+
+- [歴史とは何か](/posts/歴史とは何か)
+- [哲学入門2]()
+
 
 <div class="hidden">
 
