--- a/src/posts/精神障害.md
+++ b/src/posts/精神障害.md
@@ -1,22 +1,17 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
 ---
-
-# 精神障害
 
 ## 精神障害は病気か？
 
-例えばADHDはつくられた病気である，という主張がある．
-
-https://www.seishinshobo.co.jp/book/b598013.html
-
-https://gigazine.net/news/20130529-adhd-is-made-by-industry/
-
-
+例えばADHDはつくられた病気である，という主張がある．例えば，[この本](https://www.seishinshobo.co.jp/book/b598013.html)や[このgigazineの記事](https://gigazine.net/news/20130529-adhd-is-made-by-industry/)．
 
 これは他の医学領域にはないことで，精神障害がもつ特徴がよく現れている．
-
 このことについては次の良くまとまった2つの記事を見てほしい．
+
+[精神医学から見る精神障害　精神障害はすべてが「病気」ではない](https://medicalnote.jp/contents/160119-014-WX)
+[古茶大樹先生　～精神科診断における疾患と類型について～](https://amu-psychiatry.com/news/2021/02/01/%E5%8F%A4%E8%8C%B6%E5%A4%A7%E6%A8%B9%E5%85%88%E7%94%9F%E3%80%80%EF%BD%9E%E7%B2%BE%E7%A5%9E%E7%A7%91%E8%A8%BA%E6%96%AD%E3%81%AB%E3%81%8A%E3%81%91%E3%82%8B%E7%96%BE%E6%82%A3%E3%81%A8%E9%A1%9E%E5%9E%8B/)
 
 注意・要点をまとめると次の通り．
 
@@ -36,123 +31,183 @@ https://gigazine.net/news/20130529-adhd-is-made-by-industry/
 
 そこで病気の分類を見る前に患者が体験する症状にはどんなものがあるのかを見ることにしよう．
 
-と診断される
+意識，知覚，思考，感情，自我，人格について見よう．
 
-　第3章　
-　　本章の構成マップ
-　　I　意識
-　　II　知覚
-　　III　記憶
-　　IV　見当識
-　　V　睡眠
-　　VI　知能
-　　VII　言語
-　　VIII　思考
-　　IX　感情
-　　X　意志，欲動，行動，精神運動
-　　Ⅺ　自我意識
-　　Ⅻ　人格（パーソナリティ），性格
+### 意識
 
-知能，自我，思考，知覚，意欲，感情，意識，性格(人格，気質)
+意識とは外界からの刺激を受け入れて自己を外界に表出する心的機能のこと．
+覚醒(arousal,awareness)と外界の認識(awareness)の2つから構成される．
+覚醒は例えばJCS(Japan coma scale)で評価される．<marginnote>見当識とは「ここはどこなのか」「いつなのか」「なぜここにいるのか」「目の前にいる人は誰なのか」など、自分の置かれている状況や、周囲との関係が分かること</marginnote>
+![ニュートリー株式会社](https://www.nutri.co.jp/nutrition/keywords/ch5-4/images/k_3_1.png)
+アウェアネスについては[wikipedia](https://ja.wikipedia.org/wiki/%E3%82%A2%E3%82%A6%E3%82%A7%E3%82%A2%E3%83%8D%E3%82%B9)を参照だが，気づきを得られること，注意を向けられることだと考えればいいだろう．
 
+覚醒とアウェアネスのどちらも正常なら，意識清明であり，どちらか一方でも傷害されていれば，意識障害と呼ぶ．
+覚醒が傷害されれば，意識混濁．アウェアネスが傷害されれば意識狭窄(注意を向けられる範囲が狭い)や意識変容(認識内容が通常と異なったものになる)が生じる．
 
+### 知覚
 
-https://www.rcpsych.ac.uk/mental-health/translations/japanese
+知覚とは，感覚器官を通じて外界の存在物を意識して(感覚)，意味を知ること．感覚があるだけではなく，その感覚が何なのかを理解して知覚となる．
 
-統合失調症 　双極性障害　
+妄覚とは，誤った知覚であり，錯覚と幻覚に分かれる．錯覚は存在する対象についての誤った知覚であり，幻覚は存在しないものに対する知覚である．
+幻覚は，5つの感覚器官に対応して，幻視，幻聴，幻味，幻嗅，幻触(体感幻覚)に分かれる．
 
-不安障害、パニック障害、恐怖症　
-
-拒食症と過食症　強迫性障害
+統合失調症では他の幻覚に比べて幻聴が圧倒的に多い．
+幻視はレビー小体型認知症でよく見られる．何が見えるのかも典型例があり，子供や小動物が多い．
 
 
+### 思考
 
+思考とは，言語を媒介に行われ，目標に向かって概念がつぎつぎに想起・連結されていくことで問題解決を図る精神活動である．
 
+##### 思考過程の異常
 
-妄想性障害
+思考が，その目標に向かって，それを達成するまでの進行過程を思考過程と呼ぶ．思考が目標までスムーズに流れないのが思考過程の異常である．
+図を標準精神医学から引用する．
 
-https://www.msdmanuals.com/ja-jp/%E3%83%97%E3%83%AD%E3%83%95%E3%82%A7%E3%83%83%E3%82%B7%E3%83%A7%E3%83%8A%E3%83%AB/08-%E7%B2%BE%E7%A5%9E%E9%9A%9C%E5%AE%B3/%E7%B5%B1%E5%90%88%E5%A4%B1%E8%AA%BF%E7%97%87%E3%81%8A%E3%82%88%E3%81%B3%E9%96%A2%E9%80%A3%E9%9A%9C%E5%AE%B3%E7%BE%A4/%E5%A6%84%E6%83%B3%E6%80%A7%E9%9A%9C%E5%AE%B3
+![思路障害のいろいろ]()
 
-統合失調症
+それぞれの障害の説明は[こちら](http://medipedia.jp/article/%E6%80%9D%E8%B7%AF%E9%9A%9C%E5%AE%B3)を参照．
 
-https://www.rcpsych.ac.uk/mental-health/translations/japanese/schizophrenia
-
-気分障害(双極性障害,うつ病)
+気分障害で見られるのが観念奔逸(躁)と思考制止(うつ)．
+観念奔逸(躁)は，つぎつぎに目標が生じて話がまとまらないが，連合弛緩(統合失調症)では目的にむかって観念が連結されない．例えば，「喉が渇くので糖尿病ではないでしょうか、水をがぶがぶ飲むので…飲むのはミネラルウォーターが良いですね、家の井戸からとれる水で、私がうつ状態のとき飛び込んだ井戸ですよ、結局浮き上がってきて、隣の人に見つけてもらって、その人は本当にいい人で、恩返ししたいけれど、孝行したい時には親はなし、って言いますし…」は観念奔逸．「鶏…肝を抜いて…松竹立てて…だから地震があって…」「生物も時間も一切の両極の中和であろうと察せられる共存共栄の身をあげつつある世界において…」「タバコで市役所が花火が綺麗でお好み焼き屋の電車が…」は連合弛緩．([このサイト](http://saga-psychiatry.kir.jp/2020/07/27/2337/)より引用)
+思考途絶は思考がいきなり途切れる．思考制止は，思考のスピードが遅いだけ．例えば質問をされたときに，途中までは答えられていたのに，いきなり黙り込むのが思考途絶で，忍耐強く待てば回答が得られるのが思考制止．
 
 
 
-新型うつhttps://seiwakai-shimane.com/blog/?page_id=1005
+#### 思考内容の異常
 
-双極性障害https://seiwakai-shimane.com/blog/?page_id=1078
+誤った考えや意味付けに異常な確信をもち，かつ，訂正が不可能なものを妄想という．
+何の脈絡もなく発生し，了解不可能なものが一次妄想，状況．感情，性格から妄想の発生が了解できるものが二次妄想．
+一次妄想は統合失調症で見られ，妄想着想や妄想知覚，妄想気分などがある．
+二次妄想にはうつ病の貧困妄想や罪業妄想などがある．
+それぞれの妄想の詳しい説明は[こちら](http://medipedia.jp/article/%E5%A6%84%E6%83%B3)を参照．
 
+#### 思考体験の異常
+正常な思考対兼では，自分が思考を考えているという感覚があるが，思考の制御ができなくなった状態を思考体験の異常という．
+
+1. 制御困難だが，自分のものである自覚があるもの
+強迫
+
+恐怖症
+
+2. 制御困難で，その体験が自分のものである自覚がないもの
+作為思考 
+
+
+### 感情
+
+感情は，快・不快，喜怒哀楽などの主観的な心の状態．知覚が対象を持つのに対し，感情は対象をもたない．もちろん，知覚なのか感情なのか明確には区別できないものもある．
+
+気分(mood)は特別の対象・内容をもたず，比較的長く持続する感情の状態で，情動(emotion)とは，状況に応じて急激に生じる感情の状態で，自立神経反応のような生理的・身体的な反応を伴う．
+
+恐れの感情には不安，恐怖がある．不安は対象がなく(全般性不安障害，社交不安障害)，恐怖は特定の対象がある(広場恐怖症，閉所恐怖症)．不安は突発的に生じること(不安発作)があり，その際に自律神経症状や過換気症候群を伴うことがある．また，不安発作に次いつ襲われるかに怯えて新たな不安を抱くのが予期不安である(予期と呼ぶが，不安がおきるタイミングが予測できるわけではなく，いつ起きるのだろう，と不安になること)(パニック障害)
+
+気分の異常には，抑うつ気分，爽快気分(躁状態で見られる)，多幸症(酩酊や肝性脳症で見られる)がある．
+
+そのほか，情動失禁=情動を意志でコントロールできず些細なことで泣いたり笑ったり激怒したりする(脳梗塞や脳出血のあとに見られる)，両価性(ambivalence)=相反する感情，気持ちがほぼ同時に存在すること(パーソナリティ障害や統合失調症で見られる)がある．
+
+
+### 自我
+離人=現実感喪失とは，能動性、境界性の意識が障害されて、自分で考え感じ知覚している実感が喪失、減弱すること．
+させられ体験とは，自我意識の能動性が障害されて、思考・感情・行動が他人や外部に支配されたように感じること．
+解離とは，意識や記憶などに関する感覚をまとめる能力が一時的に失われた状態．解離性健忘では心的外傷(トラウマ)に関連して重要な個人的情報を思い出すことができない状態になる．解離性遁走では，過去の記憶の一部またはすべてを失う．家族や仕事を残して普段の環境から姿を消すこともある．解離性同一性障害，いわゆる多重人格では，一人の人間の中に全く別の人格が複数存在する．
+
+### 人格
+人格(パーソナリティ)と性格(キャラクター)はほぼ同義に用いられる．
+先天的な気質(temperament)に後天的なしつけ、教育など環境で形成された，習慣性性格や役割性格が加わったものが性格である．
+非適応的な人格により，苦痛や機能異常をきたしているとき，パーソナリティ障害と呼ばれる．
+
+
+## 具体的な疾患
+
+
+## [妄想性障害](https://www.msdmanuals.com/ja-jp/%E3%83%97%E3%83%AD%E3%83%95%E3%82%A7%E3%83%83%E3%82%B7%E3%83%A7%E3%83%8A%E3%83%AB/08-%E7%B2%BE%E7%A5%9E%E9%9A%9C%E5%AE%B3/%E7%B5%B1%E5%90%88%E5%A4%B1%E8%AA%BF%E7%97%87%E3%81%8A%E3%82%88%E3%81%B3%E9%96%A2%E9%80%A3%E9%9A%9C%E5%AE%B3%E7%BE%A4/%E5%A6%84%E6%83%B3%E6%80%A7%E9%9A%9C%E5%AE%B3)
+
+
+## [統合失調症](https://www.rcpsych.ac.uk/mental-health/translations/japanese/schizophrenia)
+
+## 気分障害
+
+- [双極性障害](https://www.rcpsych.ac.uk/mental-health/translations/japanese/bipolar-disorder) [症例](https://seiwakai-shimane.com/blog/?page_id=1078)
+- うつ病
+- [新型うつ](https://seiwakai-shimane.com/blog/?page_id=1005)
+
+## パニック障害・不安障害・恐怖症
+
+[解説](https://www.rcpsych.ac.uk/mental-health/translations/japanese/anxiety-phobia)
+[症例](https://seiwakai-shimane.com/blog/?page_id=435)
+
+神経症，いわゆるノイローゼは不安などの不適応行動を特徴とし、入院するほど重篤ではない場合が多い状態を指すが，気分障害()や，不安障害・パニック障害，強迫性障害に分類されるようになり，神経症という分類は廃止されている．[wikipedia](https://ja.wikipedia.org/wiki/%E7%A5%9E%E7%B5%8C%E7%97%87)参照．
 
 
 ## てんかん
 
-症例
+WHOの定義では
+『種種の病因によってもたらされる慢性の脳疾患であり、大脳皮質ニューロンの過剰な放電から由来する反復性の発作（てんかん発作、seizure）を主徴とし、それに変異に富んだ臨床ならびに検査所見の表出が伴う．』
 
-https://seiwakai-shimane.com/blog/?page_id=893
+けいれんとは，不随意に筋肉が激しく収縮することによって起こる発作だが，てんかんとは別の病態．
+例えば，けいれんを伴わないてんかんもある(例えば欠神発作)し，てんかんを伴わない痙攣もある(こむら返り=足がつることも痙攣の1つ)．
 
-## 神経症
+もちろん，てんかん発作で身体がガクガクと痙攣を起こすことはある．
+しかし，てんかん発作がどんな症状になるのかは，それがおきた大脳皮質ニューロンの活動しているエリアによるので，もしそれが運動野なら，痙攣発作になるが，例えば，情動を司る部分ならと不安いう反応になる．具体的には[症例](https://seiwakai-shimane.com/blog/?page_id=893)を参照．<marginnote>てんかん=けいれんと混合しやすいのは，全般てんかん，つまり大脳全体に発作が起きているときには，当然運動野にも発作が起きているので，外部からは痙攣という形で観察されやすいから．このとき他の症状は外部からは観察できない．</marginnote>
 
-身体化障害
 
-https://seiwakai-shimane.com/blog/?page_id=42
+## 身体化障害
 
-https://seiwakai-shimane.com/blog/?page_id=65
+[症例1](https://seiwakai-shimane.com/blog/?page_id=42)
+[症例2](https://seiwakai-shimane.com/blog/?page_id=65)
 
-## 発達障害(ADHD)
+## [解離性障害](https://ja.wikipedia.org/wiki/%E8%A7%A3%E9%9B%A2%E6%80%A7%E9%9A%9C%E5%AE%B3)
 
-https://en.wikipedia.org/wiki/Attention_deficit_hyperactivity_disorder
+身体化障害，解離性障害に関連するものとして[ヒステリー](https://ja.wikipedia.org/wiki/%E3%83%92%E3%82%B9%E3%83%86%E3%83%AA%E3%83%BC)も参照
 
-## 自閉症
+## [発達障害(ADHD)](https://en.wikipedia.org/wiki/Attention_deficit_hyperactivity_disorder)
+
+
+## [自閉症]()
 
 1. [対人相互反応](https://ja.wikipedia.org/wiki/社会的相互作用)の質的な障害
 2. 意思伝達の著しい異常またはその発達の障害
 3. 活動と興味の範囲の著しい限局性
 
-https://ja.wikipedia.org/wiki/%E8%87%AA%E9%96%89%E7%97%87
-
-https://en.wikipedia.org/wiki/Autism_spectrum
-
-症例
-
-https://seiwakai-shimane.com/blog/?page_id=1187
+[症例](https://seiwakai-shimane.com/blog/?page_id=1187)
 
 ## 依存症
 
-アル中とリストカット https://seiwakai-shimane.com/blog/?page_id=965
+アルコール依存症とリストカットの[症例](https://seiwakai-shimane.com/blog/?page_id=965)．リストカットの原因には(意外と?)依存症が多い．
 
-覚せい剤と統合失調症 https://seiwakai-shimane.com/blog/?page_id=1013
+覚せい剤と統合失調症についての[症例](https://seiwakai-shimane.com/blog/?page_id=1013)．覚醒剤を長期使用することで，統合失調症様の症状が出現することが知られている．
 
-## パニック障害
 
-https://seiwakai-shimane.com/blog/?page_id=435
 
-## 解離性障害 
+## 強迫性障害
 
-https://ja.wikipedia.org/wiki/%E8%A7%A3%E9%9B%A2%E6%80%A7%E9%9A%9C%E5%AE%B3
+[解説](https://www.rcpsych.ac.uk/mental-health/translations/japanese/obsessive-compulsive-disorder)
+症状については[wikipedia](https://ja.wikipedia.org/wiki/%E5%BC%B7%E8%BF%AB%E6%80%A7%E9%9A%9C%E5%AE%B3#%E7%97%87%E7%8A%B6)も参照
 
-転換性障害(ヒステリーの一部として)
 
-https://ja.wikipedia.org/wiki/%E3%83%92%E3%82%B9%E3%83%86%E3%83%AA%E3%83%BC
-
-パーソナリティ障害
+## パーソナリティ障害
 
 https://div12.org/case_study/mary-borderline-personality-disorder/
 
-強迫性障害 #症状
 
-https://ja.wikipedia.org/wiki/%E5%BC%B7%E8%BF%AB%E6%80%A7%E9%9A%9C%E5%AE%B3#%E7%97%87%E7%8A%B6
 
-摂食障害
+## [自傷行為](https://www.msdmanuals.com/ja-jp/%E3%83%9B%E3%83%BC%E3%83%A0/10-%E5%BF%83%E3%81%AE%E5%81%A5%E5%BA%B7%E5%95%8F%E9%A1%8C/%E8%87%AA%E6%AE%BA%E8%A1%8C%E5%8B%95%E3%81%A8%E8%87%AA%E5%82%B7%E8%A1%8C%E7%82%BA/%E9%9D%9E%E8%87%AA%E6%AE%BA%E7%9A%84%E3%81%AA%E8%87%AA%E5%82%B7%E8%A1%8C%E7%82%BA)
 
-認知症
+[自傷行為は他人の気を惹くために行われるのではない](https://www.comhbo.net/?page_id=5803)．それ自体がもつ，心理的苦痛の緩和効果のために実行される．
 
-https://ja.wikipedia.org/wiki/%E8%AA%8D%E7%9F%A5%E7%97%87
+## [摂食障害](https://www.rcpsych.ac.uk/mental-health/translations/japanese/anorexia-and-bulimia)
 
-## 自傷行為
+拒食症・過食症があるが，これらは別々の疾患とか，対照的な関係にあるわけではなく，重なった互いに移行する疾患．
+粗死亡率は，自殺も含めると，神経性やせ症については，10年当たり5%，神経性過食症については2%．(『今日の臨床サポート』摂食障害の項より)(これは大腸がんステージ0,1の5年死亡率とあまり変わらない．摂食障害の罹患者が若年に多いことを考えると放置しておくのは非常に危険な疾患と言える)
 
-https://www.msdmanuals.com/ja-jp/%E3%83%9B%E3%83%BC%E3%83%A0/10-%E5%BF%83%E3%81%AE%E5%81%A5%E5%BA%B7%E5%95%8F%E9%A1%8C/%E8%87%AA%E6%AE%BA%E8%A1%8C%E5%8B%95%E3%81%A8%E8%87%AA%E5%82%B7%E8%A1%8C%E7%82%BA/%E9%9D%9E%E8%87%AA%E6%AE%BA%E7%9A%84%E3%81%AA%E8%87%AA%E5%82%B7%E8%A1%8C%E7%82%BA
 
-https://www.comhbo.net/?page_id=5803
+## 参考資料
+
+- [精神症状の診かた・聴きかた](https://www.kongoshuppan.co.jp/book/b589170.html)
+精神症状の定義が明確で，提示される症例も典型例ではあるが詳述されていて，イメージがつかみやすい．読書案内も豊富．
+- [はじめての精神科](https://www.igaku-shoin.co.jp/book/detail/108298#tab3)
+代表的な精神障害が疾患のイメージの項でわかりやすく説明されている．
+- [妻と帽子をまちがえた男](https://www.hayakawa-online.co.jp/product/books/90353.html)
+
+- [標準精神医学第8版](https://www.igaku-shoin.co.jp/book/detail/108315)
