--- a/src/posts/philosophy/哲学入門1-言語.md
+++ b/src/posts/philosophy/哲学入門1-言語.md
@@ -1,91 +1,135 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
 ---
 
-哲学のイントロダクションでなぜ言語哲学から開始するのか？(開始するべきなのか？)哲学入門というと過去の偉大な哲学者が何を言ったのかをおさらいするものというイメージがあるかもしれない．
+## 哲学についての2つの誤解
 
-哲学とはどんなものか，を考えればなぜ言語が哲学で重要なのか，なぜ言語から哲学の紹介をはじめるのか，が分かると思う．
+<div class="hidden">哲学の入門で，なぜ言語からはじめるのか？(開始するべきなのか？)哲学入門というと過去の偉大な哲学者が何を言ったのかをおさらいするものというイメージがあるかもしれない．</div>
+
+哲学が何をしているのかを考えれば，なぜ言語の問題が哲学で中心的な位置を占めるのか，なぜ言語から哲学の入門をスタートするのかが分かる．
 
 それを説明する前に哲学について存在する誤解を解消しよう．
 
-哲学というとこういう文章を想像する．
+哲学というと，例えばこういう文章を想像する．
 
-*精神は静止したものではなくなくて，むしろ絶対的に不安なもの・純粋な活動であり，あらゆる固定した悟性規定の否定または観念性である．精神は抽象的に単純ではなくて，自分の単純性のなかで同時に自分自身から自分を区別することである．*
 
-https://core.ac.uk/download/pdf/148704269.pdf
+*精神は静止したものではなくなくて，むしろ絶対的に不安なもの・純粋な活動であり，あらゆる固定した悟性規定の否定または観念性である．精神は抽象的に単純ではなくて，自分の単純性のなかで同時に自分自身から自分を区別することである．*  ヘーゲル『精神哲学(上)』p11~12<marginnote>ヘーゲルの引用は[このサイト](https://core.ac.uk/download/pdf/148704269.pdf)より引用した</marginnote>
+
 
 もちろんこれは切り抜きで，これだけ見てよくわからないと言うのは全く正当な主張でない．
 
 が，哲学を専門にするわけではない人が，こういう難しい文章に触れて抱いてしまう印象は次のようなものではないか．
 
-・哲学は，高級で難解な，よくわからないはっきりしないことを述べるものだ．(実際に先に引用したヘーゲルの文章がそうだと言っているわけではなく，専門にしない人が見るとそういう印象を受けるのではないかという主張．)
-
-・哲学は，それを考えて何になるのかわからない，むしろ，何のためにもならないようなことを考えているということ．上の文を例に取れば，これだけ切り抜きで見てしまうと，精神について考えて何の意味があるの？と思うのは自然だろう．
-
+- 哲学は，高級で難解な，よくわからないはっきりしないことを述べるものだ．<sidenote-number></sidenote-number><sidenote>実際に先に引用したヘーゲルの文章がそうだと言っているわけではなく，専門にしない人が見るとそういう印象を受けるのではないか，それによって，本当に何事も述べてはいない，ただただよく分からない文章まで哲学的と考えてしまうのではないか，という主張．</sidenote>
+- 哲学は，何のためにもならないようなことを考えている．<sidenote-number></sidenote-number><sidenote>上の文を例に取れば，これだけ切り抜きで見てしまうと，精神について考えて何の意味があるの？と思うのは自然だろう．</sidenote>
 
 
-# 前者についての反論
 
-まず前者については違うと断言できる．哲学は何やらよく分からないことを言うものではない．
+## 1点目についての反論
+
+まず1点目については違うと断言できる．哲学は何やらよく分からないことを言うものではない．
 
 哲学の基本的な姿勢は次の通り．
 
-- 哲学の問題はきちんと考えていけば，完全に納得できるような答えが存在するはず
+- 哲学の問題はきちんと考えていけば，完全に納得できるような答えが存在する．
 - 哲学の問題への回答は，皆が納得できるように，曖昧さや飛躍がないように，クリアでわかりやすく書かなくてはいけない．
 
-つまり，難解で深淵で高級な言葉遣いや，複雑な文構造，文学的な比喩などに哲学の難しさがあるわけではない．哲学書を読んだ後の態度は，完全に理解した(しかし，この点は間違っているのでは？なぜなら・・・だから．)か，(この部分の理屈が)全くわからない，といったものであり，「なんとなく感覚的には言いたいことが分かった気がする」で満足することはない．
+つまり，難解で深淵で高級な言葉遣いや，複雑な文構造，文学的な比喩などに哲学の難しさがあるわけではない．哲学書を読んだ後の態度は「完全に理解した<sidenote-number></sidenote-number><sidenote>そしてこの後には「しかし，この点は間違っているのでは？なぜなら・・・」と続く．</sidenote>」とか「この部分の理屈が全くわからない」といったものであり，「なんとなく感覚的には言いたいことが分かった気がする」で満足することはない．
 
-このように，哲学では論理的に考えれば誰もが納得できるような主張を構成することを目指し，論証は言語で行われるものだから，言語が大切と言えるかもしれない．しかし，明晰な論理を構成することは，すべての学問で共通の当たり前のことなので，それだけでは哲学において言語がしめる特別な位置を説明する理由にはならない．
+それでは
 
-ひとまずは，哲学は論理的な主張の集まりだということから以下の2点が帰結することを指摘して後者の反論にうつることに使用．
+- 哲学では論理的に考えれば誰もが納得できる主張の構成を目指す．
+- 論証は言語で行われるものである．
 
-- 哲学書を選ぶ時にはちょっと読んでみて，理屈が理解出来ない・難しいと思ったら，それは書いた人が論理的に書いていないか，あなたのレベルに合っていないか，のどちらかであり，いずれにせよ読むのをやめるべきである．
-- 偉大な過去の哲学者が言ったことを覚えても哲学を学んだことにはならない．完全に納得できるのかを批判的に自分の頭で考えなければならないし，その結果，場合によっては(ほとんどの場合は)彼のどこが間違っているのかを指摘することになる．
+の2点から言語が大切と言えるだろうか．言えるかもしれない．しかし，明晰な論理を構成することは，すべての学問で共通の当たり前のことなので，それだけでは哲学において言語がしめる特別な位置を説明する理由にはならない．
 
-そこで，過去の哲学者の考えを網羅的に紹介するという哲学入門のスタイルはとらなかった．
+ひとまずは，哲学は論理的な主張の集まりだということから以下の2点が帰結することを指摘して，2点目の反論<sidenote-number></sidenote-number><sidenote>哲学はなんのためにもならないことを考えているという主張への反論</sidenote>にうつることにしよう．
 
-# 後者についての反論
+- 哲学書を選ぶ時にはちょっと読んでみて，理屈が理解出来ない・難しいと思ったら，それは書いた人が論理的に書いていないか，あなたのレベルに合っていないか，のどちらかであり，いずれにせよ読むのをやめるべきである．{.py-4}
+- 偉大な過去の哲学者が言ったことを覚えても哲学を学んだことにはならない．完全にその論理が納得できるのかを批判的に自分の頭で考えなければならない．その結果，場合によっては<small>(ほとんどの場合は)</small>彼のどこが間違っているのかを指摘することになる．<marginnote>そこで，過去の哲学者の考えを網羅的に紹介するという哲学入門のスタイルはとらなかった．</marginnote>
 
-後者については例えば歴史的な名著については問題意識が分からなければなんのために？ということが分からず，どうでもいいことを考えていると思ってしまう．過去の偉大な哲学者は，それより前の哲学者の議論や，その当時の問題意識のもとに色々なことを考えたわけで，それらから切り離して，考えたことや，その思考の最終結論だけを言われても，わからない．つまり，その考えが，ほかの考えとどう関係しているのかや，だから何なのか，ということがわからない．
 
-ここでは，根本的なところから問題意識を提示して，言語哲学がなぜ始まりであるべきなのか，言語哲学をなぜ学びたくなるのかを理解してもらうことにしよう．そして自然に認識論・行為論へと進んでいくことにしよう．
 
-# 哲学は何をしているのか？
+## 2点目についての反論
 
-哲学の対象は概念である．例えば，Xとはなにか？と問うとき，Xは知識であったり，精神であったり，時間であったりするが，これらはすべて概念である．「これが知識です」と指させるものがこの世界のどこかに存在するわけではない．我々が考える時に扱うのは概念だから，哲学は思考についての思考だと言える．
+2点目については，哲学書に限らずどんな本であっても，著者の問題意識が分からなければ「何のために？」とか「だから何？」となる．
 
-概念について考えるという点では，近代の哲学でも現代の哲学でも変わらない．変わったのは概念を明晰にするために，つまり，「Xとはなにか？」のような問いに答えるために取られる方法である．つまり，概念と言語の関係である．
+過去の偉大な哲学者は，それより前の哲学者の議論や，その当時の問題意識のもとに色々なことを考えたわけで，そういう文脈から切り離して，考えた内容や，最終結論だけを言われても，その考えが他の考えとどう関係しているのかや，だから何なのかということは分からない．いきなりヘーゲルの本を読むのは，長編テレビドラマをシーズン4の6話から見始めるようなものだ．
+
+だから，2点目は哲学特有の問題というわけではなく，一般的に物事を教えるときに多くのイントロダクションが抱える問題点だと思われる．そこで，ここでは哲学史の詳細には関わることは回避しつつ，しかし，根本的なところから問題意識を提示して，言語がなぜ哲学の始まりであるべきなのか，言語哲学をなぜ学びたくなるのかを理解してもらうことにしよう．<div class="hidden">そして自然に認識論・行為論へと進んでいくことにしよう．</div>
+
+## 哲学は何をしているのか？
+
+こうして最初に話は戻る．この項は「哲学が何をしているのかを考えれば，なぜ言語の問題が哲学で中心的な位置を占めるのか，なぜ言語から哲学の入門をスタートするのかが分かる」ではじまった．
+
+まず，哲学の対象は概念である．例えば「Xとはなにか？」と問うとき，Xは知識であったり，精神であったり，時間であったりするが，これらはすべて概念である．我々が考える時に扱うものは概念なので，哲学は思考についての思考ともいえる．<div class="hidden">「これが知識です」と指させるものがこの世界のどこかに存在するわけではないので，この問いに対して「これがXです」と指差しで回答することはできない．そこで言葉を用いて答えることになる．<marginnote>もちろん指差しで答えられるものであっても，その特殊な1例に過ぎないので概念の答えにはならない．例えば「犬とはなにか？」と問うて，目の前の柴犬を指して「これが犬です」というのは，犬の1つを指したのであって，犬とはなにかの回答にはならないと言えるだろう．よって，概念の答えは指差しでは回答できないのだ．</marginnote></div>
+
+概念について考えるという点では，近代の哲学も現代の哲学も変わらない．変わったのは概念を明晰にするために，つまり，「Xとはなにか？」のような問いに答えるために用いる方法である．先走って言うと，概念と言語の関係が近代と現代で大きく変わったのだ．
 
 デカルトなどの近代の哲学者にとっては，概念を明瞭化するために行うべきことは，心の内省によって見いだされる観念を明晰化することだった．思考とは自分の心のなかに生じ，自分だけが内省できるものだった．観念を他人に伝えるためには言語を使うしかないが，それでも言語は伝えるための手段に過ぎないので，たとえ観念をうまく言語化できなくても，観念が自分のなかで一度明晰に把握されれば，観念を所有している者にとっては誤る余地がないことになる．
 
-このように「概念の意味とは心の中にいだくイメージ(像)だ」という「意味の心像説」に対する決定的な批判はウィトゲンシュタインによってなされた．これについてはこのページhttps://mickindex.sakura.ne.jp/wittgenstein/witt_other_mental.html#:~:text=%E8%A8%80%E8%91%89%E3%81%AE%E6%84%8F%E5%91%B3%E3%82%92%E4%BD%95%E3%82%89%E3%81%8B%E3%81%AE,%E5%BF%83%E7%90%86%E4%B8%BB%E7%BE%A9%E3%81%A8%E5%91%BC%E3%81%B3%E3%81%BE%E3%81%99%E3%80%82を参照してほしい．
+このように「概念の意味とは心の中にいだくイメージ(像)だ」という考えは「意味の心像説」と呼ばれ，直接言及はされなくとも，近代哲学の基本的な考え方であった．これに対する決定的な批判はウィトゲンシュタインによってなされた．これについては[このページ](https://mickindex.sakura.ne.jp/wittgenstein/witt_other_mental.html)を参照してほしい． <marginnote>観念と心像は厳密には違うものだが，それを正確に論じることは難しく，ここでの話の大筋を変えないので，話が不正確になるのを恐れず先に進むことにする．</marginnote>
 
-==観念と心像は違う？だとすると記述に矛盾というかメッシーになる==
+こうして「<stbl>思考=概念とは，各人のプライベートな心のなかに見いだされるものではなく，概念の分析は，その言語的表現を解明することによってのみ可能になる</stbl>」という言語論的転回<sidenote-number></sidenote-number><sidenote>これについては[このサイト](http://tanemura.la.coocan.jp/re3_index/2K/ke_linguistic_turn.html)に言語論的転回とは何かを示すいくつかの引用が載せられている．そのうち，野家のものは分かりやすいので，サイトが消える前に，こちらにも載せておこう．<br><br> *デカルトに始まる近代哲学は、自我（自己意識）の存在の確実性から出発し、意識分析（反省）の方法によって、認識や存在の問題を解明しようと努めてきた。しかし、この内省的方法は意識の私秘性（privacy）という壁に阻まれ、外界存在の証明や他我認識（他人の心）の問題を解決することができず、独我論や不可知論の袋小路に陥らざるをえなかった。それに対して、フレーゲ、ラッセル、ウィトゲンシュタインらの哲学者は、哲学的議論の土俵を私秘的な意識から公共的な言語へと転換することによって、こうした困難に立ち向かうことを試みた。すなわち、哲学的命題を表現する言語を分析することによって、問題を解明ないしは消去することを目指したのである* 野家［2008：79］</sidenote>により，言語の分析が哲学の中心問題となる．自分が考えたり，他人が考えていることを明晰にするためには，言語を分析するしかなく，哲学とは明晰に考えること，思考について思考することなのだから，言語の問題から哲学に入門するのが妥当だろう．
 
-つまり，思考=概念とは，各人のプライベートな心のなかに見いだされるものではなく，その言語的表現を解明することによってのみ可能になるものなのだ．だから言語が哲学の中心問題となる．
+## 言語はいかに混乱して使われるか
 
-つまり，考える(考えていることを判断する)上でもっとも基本になるのが，言語の問題であり，哲学とは明晰に考えることに他ならないから，言語の問題から哲学にはいるのは妥当だろう．
+考えるとは言語を使うことであり，考えたことは言語で表現されたもの，すなわち文をみれば明らかになる．これが言語論的転回だった．
+
+実際に文を分析してみると，今まで哲学の問題とされていたものの多くは，言葉の誤った使い方による，ナンセンスな問いであったり，何事かを語っているようで，何も語っていないということが明らかになる．
+
+### ナンセンスな問い
+
+土屋 賢二の『あたらしい哲学入門 なぜ人間は八本足か？』から2つ例をとって説明しよう．
+
+この本の表題にある「なぜ人間は八本足なのか」はナンセンスな，有効でない問いの代表である．というのも「なぜ」という言葉の後ろには事実がこないといけないのに「人間は八本足」という事実でない記述がきているから．だから，「なぜ人間は八本足なのか」と聞かれれば，その問い自体が間違っているよ，そもそも人間には２本しか足がないよ，と教えてあげる必要がある．
+
+同様に「ロウソクの火は消えたらどこにいくのか」もナンセンスである．ここで問題になるのは「消える」という言葉の両義性，つまりこの言葉に複数の意味があることである．
+
+「ロウソクの火が消える」というとき「消える」とはこの世から無くなるということである．この世にないものはどこにあるか問うことはできない．だから，例えば「天使のような女はどこにもいない．では天使のような女はどこにいったのか？」と問うことは，ナンセンスである．
+
+ではなぜ「ロウソクの火は消えたらどこにいくのか」という問いに意味を感じるのかといえば，それは「消える」という言葉には「別の場所に行く」という意味もあるからだ．例えば「公園で遊んでいた子供が消えてしまった」．このとき，我々は「消える」という言葉をこの子供が「この世から無くなる」という意味ではなく「どこかに行った」という意味で使う．それゆえ「では子供はどこに行ったのか？」は意味のある問いである．この「消える」の両義性により，「ロウソクの火は消えたらどこにいくのか」が一見有意味に見えてしまうのだ．
+
+このように，両義的な言葉を不用意に使い，ナンセンスな問いを生み出してしまう例は多い．
+
+### 何事かを語っているようで何も語っていない例
+
+もう少し実践的な例を出すと，「自然法則に人間が従っているのだとすると，人間に自由意志はあるのか？」．例えば人間に自由意志がないのだとしたら，全ては勝手に起こったことで，例えば誰かが万引しても，ひき逃げしても，それは雨が降ったり，地震が起きたりすることと同じなので，その人を責めることができなくなる．これは大問題である．
+
+このとき，「従う」という言葉の使い方には2つの意味があることに注意する．1つは「ルールに従う」とか「道徳に従う」というときの「従う」である．この場合，従うことも従わないこともでき，そのことが自由意志と結びつき得る．つまり，従わないこともできるのに，ずっと従っているのなら，自由意志がないのではないのか？と言えるということだ．だが「自然法則に従う」というときの「従う」の意味はこれとは違う．この場合，もし従わないものが見つかれば自然法則が修正される．例えば，ある実験で物理法則に対する例外が見つかれば，法則の間違いが明らかになったことになり，実験結果にあうような新しい法則が打ち立てられる．だから，自然法則に従わないということはできない．従わなかったら，従っているように自然法則の方が修正されるだろう．それゆえ，ずっと従っているからといって，そのことは自由意志の欠如とは結びつかない．
+
+つまり「自然法則に人間が従う」は，自然法則が「万物が必ず従う<small>(ように修正され作られる)</small>法則」と言葉で定義される以上，この定義から，演繹されることなのだ．<marginnote>すべてのXについてA．ならば，ある(任意の)XについてA．は「ある」の導出として認められる</marginnote>それゆえ，「もし自然法則に人間が従うなら」という部分は「もし独身者が結婚していないなら」とか「もし青い空が青いならば」と同じように，「もし」の中身が<small>(言葉の定義により)</small>常に正しくなるため，「自然法則に人間が従っているのだとすると，人間に自由意志はあるのか？」という問いは，実質的には「人間に自由意志はあるのか？」と問うているにすぎない．
+
+これと同じ例として，「十分に祈れば叶う」を考えてみる．もしこの文を
+- 祈っても叶わなかったときは，祈りが不十分だったからだと考える
+- 叶ったときには，やはり十分祈れば叶うのだと考える
+というかたちで使うのであれば，この文は何事も語っていない．つまり，ここでは「十分に祈る」の定義が「叶うこと」になってしまっている．なぜなら，祈りが叶ったときのみ十分に祈ったと判断するのだから．よって，「十分に祈れば叶う」という文は実際には「叶うのならば叶う」を意味することになる．これは「青い空ならば青い空」と同じくらい何事も語っていない．
+
+このように，その語，その文が実際には何を意味しているのかは，別の言葉で言い換えてみたり，その文が成立していると言えるのはどんなときかを考えてみると，分かることがある．
+
+### 総合練習「ある」
+
+最後の例として「ある」をとりあげよう．例えば，
+
+- 庭には池がある．
+- 彼には投票権がある．
+- プロ野球開幕まで1週間がある．
+
+このとき「投票権はどこにあるのか？」と問うのはナンセンスなのは説明できるだろうか？「ある」には確かに「事物が存在する」という意味があって，1番目の文ではその意味で使われているが，「彼には投票権がある」というときに，これが意味しているのは「彼は選挙で投票できる」ということだ．投票できるときに，権利があるといい，投票できないときに，権利がないという．権利のあるなしは行為の実行可能性について言及しているだけで，何らかの事物を指しているわけではない．
+
+同様に，3番目の問いに触発された「1週間はどこにあるのか？」もナンセンスである．「プロ野球開幕まで1週間がある」というときに意味しているのは，「プロ野球開幕までにアナログ時計の長針が14回転する」ということ，もしくはもっと厳密に考えたければ「プロ野球開幕までにセシウム133原子が91億9263万1770 * 60 * 60 * 24 * 7回電磁波を出す」ということである．つまり，時間があるというとき意味しているのは，ある量の運動を行えるということであって，それに対応するものを1時間とか1週間のような名前で呼んでいるに過ぎない． <marginnote>実際，時が止まったというときに我々がイメージするのは，すべての物体の運動が止まった様子であり，ここからも時間は常に運動によって測られていることがわかる</marginnote>だから，これも何らかの存在を示しているわけではなく，我々の生活に必要な便利な省略語を概念として導入 <sidenote-number></sidenote-number><sidenote>実際「テストはこれから地球が地軸を中心に45度回転したら終了します(テストはこれから3時間行われます)」のような使い方は誰もしたくないだろう．</sidenote> し，その事態の成立を「ある」とか「ない」とかいう言葉を使って表しているということだ <sidenote-number></sidenote-number><sidenote>「夢中で時間を忘れた」というときの「時間」は運動に対応したものではない，と思うかもしれないが，この場合の「時間」は「1週間」のようなこの段落で議論した「時間」と別のものと考えるのが良いだろう．実際，例えば人間の体感する熱い・冷たいは，温度のみで決まるものではない(同じ気温の場所で放置されたものは同じ温度だが，例えば鉄棒は木よりもひんやり冷たく感じる)．同様に人間が感じる「時間」も，ここで議論した「時間」のみで決まるわけではなく，2つは関連していて同じ語で表されるが，別物なのだ．
+</sidenote> ．
 
 
+## 言語 哲学の意義
 
-# 言語はいかに混乱して使われるか
+こうして，哲学上の問題の多くが、言語に細心の注意を払うことによって、あるいは言語を改革することによって、あるいは私たちの日常言語をよりよく理解することによって，解決・解消されるのではないか，と考えることができる．<marginnote>[linguistic philosophy](https://en.wikipedia.org/wiki/Linguistic_philosophy)も参照</marginnote>ここでいう解消とは，その問いがナンセンスであったことが分かり，問い自体がなくなるということである．もちろんすべての問題がナンセンスで片付けられるわけではなく，むしろ，問題がナンセンスにならないためにはどう問いを定式化すれば良いのかということを明らかにする方法と捉えたほうが良いだろう．
 
-考えるとは言語を使うことであり，考えたことは言語で表現されたもの(文)をみれば明らかになる．
+哲学におけて，言語を分析することの意義が分かったと思う．一見，問題を提出しているように見えて，何事かを語っているように見えて，文を分析してみると，そうではないことが分かる場合を実例を通して実感してもらえれば嬉しい．哲学は偉大な人が取り組んでも，問題の抽象性から言語的誤解や混乱がおきやすいが，その危険を抱えているのは哲学者だけではなく，我々も同じである．考えることとは言語を使用することである以上，言葉をうまく使えていないために，思考が明晰にならない，何かを考えているようで何も考えていない，ナンセンスに陷ってしまう，という可能性が常にある．そうならないための方法論や実践練習を現代の哲学は非哲学者にも提供してくれていると思う．これこそ，哲学を誰もが学ぶべき理由だろう．
 
-文を分析すると，今まで哲学の問題とされていたものの多くは，言葉の誤った使い方による，ナンセンスな問いなのではないか？ということが明らかになる．
 
-『あたらしい哲学入門 なぜ人間は八本足か？』から「ロウソクの火は消えたらどこにいくのか」を例に説明しよう．この問いは一見，哲学的な問いを提出しているように見えるがナンセンスである．つまり有効な問いになっていない．表題にある「なぜ人間は八本足なのか」はナンセンスな，有効でない問いの代表である．というのも「なぜ」という言葉の後ろには事実がこないといけないのに，人間は八本足という事実でない記述がきているから．だから，「なぜ人間は八本足なのか」と聞かれれば，その問い自体が間違っているよ，そもそも人間には２本しか足がないよ，と教えてあげる必要がある．
-
-同様に，なぜ「ロウソクの火は消えたらどこにいくのか」がナンセンスなの問いなのかを考えてみよう．ここで問題になるのは「消える」という言葉の両義性，つまりこの言葉に複数の意味があることである．
-
-「ロウソクの火が消える」というとき「消える」とはこの世から無くなるということである．この世にないものはどこにあるか問えない．例えば「天使のような女はどこにもいない．では天使のような女はどこにいったのか？」と問うことは，ナンセンスである．
-
-ではなぜ「ロウソクの火は消えたらどこにいくのか」という問いに意味を感じるのかといえば，それは「消える」という言葉には「別の場所に行く」という意味があるからだ．例えば「公園で遊んでいた子供が消えてしまった」このとき，我々は「消える」という言葉をこの子供がこの世から無くなったという意味ではなく，どこかに行ったという意味で使う．それゆえ「では子供はどこに行ったのか？」は意味のある問いである．この「消える」の両義性により，「ロウソクの火は消えたらどこにいくのか」が一見有意味に見えてしまうのだ．
-
-このように，両義的(ambiguious)な言葉を不用意に使い，ナンセンスな問いを生み出してしまう例は多い．
-
-例えば，
-
+## おまけ 道具主義
 
 
 ほかの代表的な例として操作的に定義される構成概念を実在物とみなしてしまう，ということを紹介しよう．
@@ -93,76 +137,70 @@ https://core.ac.uk/download/pdf/148704269.pdf
 漢方　道具主義
 
 
-
-こうして，哲学上の問題の多くが、言語に細心の注意を払うことによって、あるいは言語を改革することによって、あるいは私たちの日常言語をよりよく理解することによって，解決・解消されるという考え方は，linguistic philosophy https://en.wikipedia.org/wiki/Linguistic_philosophy とよばれる。ここでいう解消とは，その問いがナンセンスであったことが分かり，問い自体がなくなるということである．もちろんすべての問題がナンセンスで片付けられるわけではなく，むしろ，問題がナンセンスにならないためにはどう問いを定式化すれば良いのかということを明らかにするものと捉えたほうが良いだろう．
-
-哲学におけて，言語を分析することの意義が分かったと思う．哲学は偉大な人が取り組んでも，問題の抽象性から言語的誤解や混乱がおきやすいが，その危険を抱えているのは哲学者だけではなく，我々も同じである．考えることとは言語を使用することである以上，言葉をうまく使えていないために，思考が明晰にならない，何かを考えているようで何も考えていない，ナンセンスに陷ってしまう，という可能性が常にある．そうならないための方法論や実践練習を言語哲学は非哲学者にも提供してくれていると思う．これこそ，哲学を誰もが学ぶべき理由だろう．
-
-これまで紹介したことは，言語に関する哲学のほんの一部分であり，ここから記号論理学や意味論，生成文法など言語に関するいろいろな分野が発展していく．記号論理学のところについては，論理学シリーズで説明する予定．意味論，生成文法については参考を見てほしい．
-
-
-
-## 言語の混乱のしかた
-
-- ambiguiousな言葉に気づかない(一般には違う働きをする文法要素を同じ種類のものとみなす)
-- カテゴリーミステイク(ライルのデカルトへの批判)
-
-勝ったほうが強い　十分に祈れば叶う　平均的日本人は1.3回結婚する　
-
-
-
-あらゆる論述の誤りは、ある文をそれが属していないクラスに帰属させることであるから、すべての誤りはカテゴリー錯誤であると言える。しかし哲学的な意味でのカテゴリー錯誤は、最も厳密な形態の帰属の誤り、すなわち論理的に不可能なものを是認することである。例えば「海のビジネスは黄色い」という文章は統語論的に正しいが、意味論的に間違っている。この文では「ビジネス」や「黄色い」という語の帰属先を間違えているから意味を成さないのである。
-
-https://w.atwiki.jp/p_mind/pages/102.html
-
-
-
-分析哲学
-
-linguistic philosophyとは、
-
-https://en.wikipedia.org/wiki/Linguistic_philosophy
-
-
-
-同じように哲学の問題「時間とは何か」のような哲学的問題も言葉を誤って使ったことによって生じたものであるから，日常言語を注意深く見ていけば問題が解消，つまり問題自体がナンセンスなものとして消滅してしまう，という方向で話は進む．何事かを語っているように見えても，実際は何も語ってはいないことの具体例を色々とあげながら．
-
-この日常言語の分析の時に使える概念として操作的定義(本文では基準と呼ばれているが)が出てくる．操作主義とは、観察によって直接確認することができない概念を、操作（観測・測定）によって定義する方法論である。操作的定義(operational definition)とは、構成概念をその測定操作によって測定されるもの、とする定義のことである。
-
-この構成概念を実在物と思ってしまうこともナンセンスの原因となる．
-
-同じように時間も測定によって定義されるものである．我々は時間を時計の針の動きで見る．時間が止まったというのは，全ての動きが止まったことであり，動き始めれば時間が再開したと考える．実際，現在の1秒の定義もセシウム原子の遷移運動をもとに決められている．いずれにせよ，なにかの運動をもとに時間は定義されるのであって，それによって定義される時間がどこかにある実体のあるものだと考える必要はない．同じように気温は科学的には
-
-
-
-範疇間違い (category mistake)という事象（ケンブリッジの各校舎を案内されながら「で、大学はどこですか？」と問う人が犯しているような、抽象的対象の範疇と観察可能な対象の範疇との取り違えなどの範疇の誤りを指す）の問題点を指摘したギルバート・ライル（Gilbert Ryle,主著『心の概念（“The Concept of Mind”）』[48]）も、日常言語に依拠したタイプの初期の重要な分析哲学者だった。
-
-https://ja.wikipedia.org/wiki/%E8%A8%80%E8%AA%9E%E5%93%B2%E5%AD%A6
-
-
-
-・あたらしい哲学入門(土屋) 
-
-・言語哲学大全1
-
-
-
-真理・言語・論理　論理哲学論考
-
-
-
-# ボツ
-
-もっとも良い哲学入門書　この本の1時限目で述べられている次のような態度は誤解されがちな哲学の基本を表すものである
-
-これは『あたらしい哲学入門 なぜ人間は八本足か？』で入学式の学長挨拶が哲学者によるものだったら，という想定で著者の土屋先生が例として作ったものだ．
-
-*みなさんとともに時空に存在を刻む非隠蔽的営みの中、脱自的交差構造が階層をなしておのれを示す偶然的被投性に、決意に満ちた困惑がおのれの存立を賭けて自己開示しております。陽光ふりそそぐ陰鬱と高邁 をたたえたギリシアのアカデメイアの地に端を発した脱構築的言説の祝福された奇跡との邂逅が今まさにおのれを創設しているのです*
-
-(土屋先生がによるとこの文章が言いたいことは，「入学おめでとう．大学に入ってよかったね．がんばってね」)
-
-また，哲学書を読んだ時の心の高まりは，論理の理解に付随して生じるものであり，それなしに生じた心の高まりは哲学を学んだことによるものとは言えない．
-
-
-
-する，ということが最もよく現れているのが言語論であり，これが現代哲学の中心にあるのは間違いない．この誤解が解ければ，哲学はかなり面白い，日常生活を論理的に解明する，だから，そこから得られる知的喜びは数学(ただし計算はしないけれど)に近い．だからここからスタートする．
+<div class="hidden">
+    
+    # 言語の混乱のしかた
+    
+    - ambiguiousな言葉に気づかない(一般には違う働きをする文法要素を同じ種類のものとみなす)
+    - カテゴリーミステイク(ライルのデカルトへの批判)
+    
+    勝ったほうが強い　十分に祈れば叶う　平均的日本人は1.3回結婚する　
+    
+    
+    
+    あらゆる論述の誤りは、ある文をそれが属していないクラスに帰属させることであるから、すべての誤りはカテゴリー錯誤であると言える。しかし哲学的な意味でのカテゴリー錯誤は、最も厳密な形態の帰属の誤り、すなわち論理的に不可能なものを是認することである。例えば「海のビジネスは黄色い」という文章は統語論的に正しいが、意味論的に間違っている。この文では「ビジネス」や「黄色い」という語の帰属先を間違えているから意味を成さないのである。
+    
+    https://w.atwiki.jp/p_mind/pages/102.html
+    
+    
+    
+    分析哲学
+    
+    linguistic philosophyとは、
+    
+    https://en.wikipedia.org/wiki/Linguistic_philosophy
+    
+    
+    
+    同じように哲学の問題「時間とは何か」のような哲学的問題も言葉を誤って使ったことによって生じたものであるから，日常言語を注意深く見ていけば問題が解消，つまり問題自体がナンセンスなものとして消滅してしまう，という方向で話は進む．何事かを語っているように見えても，実際は何も語ってはいないことの具体例を色々とあげながら．
+    
+    この日常言語の分析の時に使える概念として操作的定義(本文では基準と呼ばれているが)が出てくる．操作主義とは、観察によって直接確認することができない概念を、操作（観測・測定）によって定義する方法論である。操作的定義(operational definition)とは、構成概念をその測定操作によって測定されるもの、とする定義のことである。
+    
+    この構成概念を実在物と思ってしまうこともナンセンスの原因となる．
+    
+    同じように時間も測定によって定義されるものである．我々は時間を時計の針の動きで見る．時間が止まったというのは，全ての動きが止まったことであり，動き始めれば時間が再開したと考える．実際，現在の1秒の定義もセシウム原子の遷移運動をもとに決められている．いずれにせよ，なにかの運動をもとに時間は定義されるのであって，それによって定義される時間がどこかにある実体のあるものだと考える必要はない．同じように気温は科学的には
+    
+    
+    
+    範疇間違い (category mistake)という事象（ケンブリッジの各校舎を案内されながら「で、大学はどこですか？」と問う人が犯しているような、抽象的対象の範疇と観察可能な対象の範疇との取り違えなどの範疇の誤りを指す）の問題点を指摘したギルバート・ライル（Gilbert Ryle,主著『心の概念（“The Concept of Mind”）』[48]）も、日常言語に依拠したタイプの初期の重要な分析哲学者だった。
+    
+    https://ja.wikipedia.org/wiki/%E8%A8%80%E8%AA%9E%E5%93%B2%E5%AD%A6
+    
+    
+    
+    ・あたらしい哲学入門(土屋) 
+    
+    ・言語哲学大全1
+    
+    
+    
+    真理・言語・論理　論理哲学論考
+    
+    
+    
+    # ボツ
+    
+    もっとも良い哲学入門書　この本の1時限目で述べられている次のような態度は誤解されがちな哲学の基本を表すものである
+    
+    これは『あたらしい哲学入門 なぜ人間は八本足か？』で入学式の学長挨拶が哲学者によるものだったら，という想定で著者の土屋先生が例として作ったものだ．
+    
+    *みなさんとともに時空に存在を刻む非隠蔽的営みの中、脱自的交差構造が階層をなしておのれを示す偶然的被投性に、決意に満ちた困惑がおのれの存立を賭けて自己開示しております。陽光ふりそそぐ陰鬱と高邁 をたたえたギリシアのアカデメイアの地に端を発した脱構築的言説の祝福された奇跡との邂逅が今まさにおのれを創設しているのです*
+    
+    (土屋先生がによるとこの文章が言いたいことは，「入学おめでとう．大学に入ってよかったね．がんばってね」)
+    
+    また，哲学書を読んだ時の心の高まりは，論理の理解に付随して生じるものであり，それなしに生じた心の高まりは哲学を学んだことによるものとは言えない．
+    
+    
+    
+    する，ということが最もよく現れているのが言語論であり，これが現代哲学の中心にあるのは間違いない．この誤解が解ければ，哲学はかなり面白い，日常生活を論理的に解明する，だから，そこから得られる知的喜びは数学(ただし計算はしないけれど)に近い．だからここからスタートする．
+</div>
