--- a/src/posts/philosophy/正義論.md
+++ b/src/posts/philosophy/正義論.md
@@ -1,160 +1,173 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
+title : 正義と善入門
 ---
+<link rel="stylesheet" href="https://unpkg.com/treeflex/dist/css/treeflex.css">
 
-# 正義と善
+## 正義と善の位置関係
 
-道徳は我々に何をすべきかと問いかける．
+「何をすべきか」というとき，問題は「しなければならない」と「するのが良い」に分けられる．ここでは前者を正義の問題，後者を善の問題とする．
 
-「すべき」というときにそれは「しなければならない」と「するのが良い」に分けられる．ここでは前者を正義の問題，後者を善の問題としてみよう．
+ロールズに従って正義と善の基本的な理解をしてみよう．
 
-ロールズに従って正義と善の基本的な理解をしてみよう．http://www.ethics.bun.kyoto-u.ac.jp/jk/jk18/right.html
+<marginnote>[ここのサイト](http://www.ethics.bun.kyoto-u.ac.jp/jk/jk18/right.html)からの引用． </marginnote>「リベラルな社会」では，人々は「善」に関して多様な理解を持っている．つまりリベラルな社会では，「どのような生が善き生なのか」「自分にとってどのような生が幸福な生なのか」あるいは「自分にとって人生の目的(end)となる善とは何か」ということに関する各人の理解は多様である。ロールズは、多様な「善」に関する構想の実現を各人が自由に追求できるために必要な基本的権利に関する中立的な原理である、「正義の原理」を規定することを意図している。そしてその「正義の原理」は多様な善に対して「中立的な」原理であるから、「正義の原理」を定式化し、さらにそれを正当化する際には、何らかの特定の「善(善き生)」の概念を前提してはならない。「正義の原理」は、「善」の概念から独立したカテゴリーである「正」の概念から導かれねばならないのである。そしてロールズは「正義の原理」を導くために、一種の仮想的な状況である「原初状態」という概念装置を用いている。その「原初状態」では、各人は「無知のベール」の背後で、自分が何を人生の目的である「善」として理解しているのかを知らないと想定されている。そのような「原初状態」では、あらゆる「善」の理解から中立的な 「正義の原理」として、第一原理(自由の尊重)、機会均等原理、格差原理(社会的に最も恵まれない人々の状態の改善)が採択されることになる。
 
-「リベラルな社会」では、人々は「善」に関して多様な理解を持ってい る 。つまりリベラルな社会では、「どのような生が善き生な のか」「自分にとってどのような生が幸福な生なのか」あるいは「自分にとっ て人生の目的(end)となる善とは何か」ということに関する各人の理解は多様である。ロールズは、多様な「善」に関する構想の実現を各人が自由に追求できるために必要な基本的権利に関する中立的な原理である、「正義の原理」を規定することを意図している。そしてその「正義の原理」は多様な善に対して「中立的な」原理であるから、「正義の原理」を定式化し、さらにそれを正当化する際には、何らかの特定の「善(善き生)」の概念を前提してはならない。「正義の原理」は、「善」の概念から独立したカテゴリーである「正」の概念から導かれねばならないのである。そしてロールズは「正義の原理」を導くために、一種の仮想的な状況である「原初状態」という概念装置を用いている。その「原初状態」では、各人は「無知のベール」の背後で、自分が何を人生の目的である「善」として理解しているのかを知らないと想定されている。そのような「原初状態」では、あらゆる「善」の理解から中立的な 「正義の原理」として、第一原理(自由の尊重)、機会均等原理、格差原理(社会的に最も恵まれない人々の状態の改善)が採択されることになる。
+「人それぞれ異なる善を各人が追求することを保証する，善から独立した正義の原理が必要」というところが分かれば十分．善についてはこれで終えて，追い求めるべき正義とはどんなものかを考えていくことにしよう．
 
-というのがロールズの大まかな議論である．この議論を通して，正義，善とは何かが大まかに分かっただろう．
+## 正義の4つの側面
 
-# 正義の4つの側面
+正義の特徴をStanford Encyclopedia of Philosophyの[justiceの項](https://plato.stanford.edu/entries/justice/)を参考にみていく．
 
-もう少し正義の特徴をみていく．https://plato.stanford.edu/entries/justice/
+第一に，正義の問題は、人々が限定的な資源に対して拮抗する要求をするせいで，そのすべてを満たすことができないような状況で発生する．我々はそのような対立を解決するために正義に訴えるのである．一方、人々の利害が一致して，ある共通の目的を追求するための最善の方法を決定しなければならない場合や，資源が十分にあるために，個人が望むままに得られる状況では正義の問題は生じない．
 
-第一に，正義の問題は、人々が限定的な資源に対して拮抗する要求をするために，そのすべてを満たすことはできないような状況で発生する．我々はそのような対立を解決するために正義に訴えるのである．一方、人々の利害が一致して，ある共通の目的を追求するための最善の方法を決定しなければならない場合や，資源が十分にあるために，個人が望むままに得られる状況では正義の問題は生じない．
+第二に，正義は義務である．我々は正義を執行するものに，実際に正義を執行するように要求することができる．これは善との違いで，慈善や許しなどは乞うことはあっても要求することはできないが，不正に対しては，正当に扱われることを要求できる．
 
-第二に，正義は義務である．我々は正義を執行するものに，実際に正義を執行するように要求することができる．これは善との違いである．慈善や許しなどは乞うことはあっても要求することはできない．
+第三に正義は2つのケースが似ている場合、同じように扱われることを要求する．すなわち正義は「等しきものは等しく，不等なるは不等に」と定式化できる．
 
-第三に正義は2つのケースが似ている場合、同じように扱われることを要求する．すなわち正義は「等しきものは等しく，不等なる不等に」と定式化できる．
+第四に正義にはそれを実行する個人や国家などの主体がなければいけない．どのような主体もその実現に寄与していない事態を不正とすることはできない．例えば才能のある人が若くして癌で死んでもそれを不正と呼ぶことはできない．<marginnote> [公正世界仮説](https://ja.wikipedia.org/wiki/%E5%85%AC%E6%AD%A3%E4%B8%96%E7%95%8C%E4%BB%AE%E8%AA%AC)も参照．</marginnote>
 
-第四に正義にはそれを実行する個人や国家などの主体がなければいけない．どのような主体もその実現に寄与していない事態を不公正とすることはできない．例えば才能のある人が若くして癌で死んでもそれを不正と呼ぶことはできない．
+## 正義の対立
 
-# 正義の対立
+第三の点「等しきものは等しく，不等なる不等に」は，抽象的な定義であり，これを実行に移す際には，さまざまな対立が生じることについて，次の仮想的な状況を例にとって確認しよう．
 
-第三の点「等しきものは等しく，不等なる不等に」は，抽象的な定義であり，これを実行に移す際にさまざまな対立が生じることについて確認しよう．
+<marginnote>ここの議論は，『**POLICY PARADOX:** THE ART OF POLITICAL DECISION MAKING』を参考にした．</marginnote>
 
-(**POLICY PARADOX:**THE ART OF POLITICAL DECISION MAKING)
+<span class="text-xl"> **状況設定** </span>
+大学の授業でホールケーキを1つ買ってきて，みんなで分けて食べることにした。どう分ければ正義条件「等しきものは等しく，不等なる不等に」を満たすだろうか。
 
-状況: 大学の授業でホールケーキを1つ買ってきて分けることにした。どんな分け方が正義条件「等しきものは等しく，不等なる不等に」を満たすだろうか。いくつかの解決策を見ていこう．
-
-0. 授業の出席者で均等に分ける
+1. 授業の出席者で均等に分ける
 
 これがもっとも思いつきやすい回答だろう．しかし，次のような反対意見がありうる．
 
-1.  そのときに授業を欠席した人も含めて均等に分けるべきである。
+2. そのときに授業を欠席した人も含めて均等に分けるべき
+2. 成績に応じて分けるべき．ケーキを分割する前に小テストを行って、成績の良い人はより多くのケーキを分配されるべき(equal slices for equal merit)
+3.  身分に応じて分けるべき．つまり学部生は少量， 大学院生はそれより多く，准教授にはさらに多く，というように。(equal slices for equal ranks)
+4.  男は社会的にケーキを得る機会が少ない。ゆえにまずは男女で半分ずつ分け，その後で個人に分けるべき(equal slices for equal blocks)
+5.  全員にフォークをもたせて， 競争させればいい(equal opportunity with equal starting point)
+6.  (ケーキが分けるほど大きくないときには)くじびきで食べる人を選べばいい(equal statistical chance)
+7.  投票数に比例してケーキを食べる量を決めればいい(equal slices for equal votes)
 
-2.  成績に応じて分けるべき。ケーキを分割する前に小テストを行って、成績の良い人はより多くのケーキを分配されるべき。
-
-(equal slices for equal merit)
-
-3.  身分に応じて分けるべき。つまり学部生は少量, 大学院生はそれより多く, 准教授にはさらに多く, というように。
-
-(equal slices for equal ranks)
-
-4.  男は社会的にケーキを得る機会が少ない。ゆえにまずは男女で半分ずつ分け, その後で, 個人に分けるべき
-
-(equal slices for equal blocks)
-
-5.  全員にフォークをもたせて, 競争させればいい
-
-(equal opportunity with equal starting point)
-
-6.  (ケーキが分けるほど大きくないときには)くじびきで食べる人を選べばいい
-
-(equal statistical chance)
-
-7.  投票数に比例してケーキを食べる量を決めればいい
-
-(equal slices for equal votes)
-
-これらの正義は，何の等しさを考えるのかという点で対立している．どれかの基準が特に正しい, ということはあるのだろうか．
+これらの正義は，何の等しさを考えるのかという点で対立している．このとき，どの正義基準が特に正しい，ということはあるのか？
 
 # もっと根本的なところを
 
-このような正義の実装についての議論はあるが，もっとも根本的なのは，「等しきものは等しく，不等なる不等に」という正義の定式化が正当化できるものなのかどうか，ということである．この定式化が間違っていれば，どんな正義を実装するのが良いのかを議論することに意味はない．
+このように正義原理をどう実装するかについても議論はあるが，もっとも根本的なのは，「等しきものは等しく，不等なる不等に」という原則が正当化できるものなのかどうか，ということだ．というのも，もし，この原則が間違っているなら，どんな形で実装するのが良いのかを議論することに意味はないから．
 
-このような根本的な問題から正義について考えるのが，井上達夫の『共生の作法』である．
+この正義の根本問題について考えるのが，井上達夫の『共生の作法』である．
 
-ここでは，この定式化の正当化に対する一つの反論，すなわちどんな価値判断も，それゆえにこの正義の定式化も，客観的基礎を有し得ず，原理的に主観的・恣意的にならざるを得ないとする相対主義への批判を紹介しよう．
+さて，正義の正当化の道には強力な論敵が存在する．それは相対主義である．その主張は「どんな価値判断も客観的基礎を有し得えないので，原理的に主観的・恣意的にならざるを得ない」というものである．これを正義に応用すれば，正義原則が一つの価値判断である以上，客観的基礎を有しえないのだから，「人それぞれの善とは違う，多くの人に正しいと認められる正義」などというものはない，といえる．
 
+そこで，ここでは，この相対主義に対して『共生の作法』でなされる批判を見ていこう．
 
+## 相対主義の分解
 
-# 相対主義批判
-
-まず相対主義と一言にいっても，様々な立場が明確に区別されないままひとまとめにされてしまって，それが議論に混乱を起こすとともに，相対主義者に不当な説得力を与えている．
+まず相対主義と一言にいっても，様々な立場が明確に区別されないまま，一つにまとめられて，それが議論に混乱を起こすとともに，相対主義者に不当な説得力を与えている．
 
 相対主義は以下のように区別できる．
 
-まず経験的相対主義は，世界を観察する限り, 普遍的に人類に共有されている価値観はない，と主張する．これに対しては，経験的に価値観が多様であることと, 客観的に正しい価値があることは両立しうることだ，と批判できる．
 
-次に規範的相対主義は，人間の価値観は単一ではなく多様であるべきだ，と主張する．これに対しては，多様な価値観を支持しながらも，その間で批判的な討論をすることで客観的な価値に接近しようとすることはあり得る，と批判できる．
+<div class="tf-tree tf-gap-l">
+  <ul>
+    <li>
+      <span class="tf-nc">相対主義</span>
+      <ul>
+        <li><span class="tf-nc">経験的相対主義</span></li>
+        <li>
+          <span class="tf-nc">自然的理論的知識</span>
+          <ul>
+            <li><span class="tf-nc">規範的相対主義</span></li>
+            <li>
+                <span class="tf-nc">理性によるもの</span>
+                <ul>
+                <li><span class="tf-nc">非普遍主義</span></li>
+                <li><span class="tf-nc">純粋数学</span></li>
+                <li><span class="tf-nc">形而上学</span></li>
+                <li><span class="tf-nc">自然学</span></li>
+                </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
 
-次に非普遍主義は，あらゆる価値判断の妥当性は, 歴史的・文化的・経済的条件など、人間の意志と独立した偶然的な要素に依存している，と主張する．これに対しては，偶然的な要素(コンテキスト)さえ固定されれば, 価値判断の妥当性は個人の判断によらない客観的なものになる，と批判できる．
+まずは，経験的相対主義・規範的相対主義・非普遍主義の主張をみて，それに対して批判しよう．
 
-最後の価値相対主義が狭義の相対主義であり，我々の真の敵である．彼らは，いかなる価値判断も客観的な妥当性を持ち得えず, 価値判断は原理上恣意的な問題であると主張する．
+経験的相対主義
+主張:世界を観察する限り， 普遍的に人類に共有されている価値観はない
+批判:経験的に価値観が多様であることと，客観的に正しい価値があることは両立しうる
+
+規範的相対主義
+主張:人間の価値観は単一ではなく多様であるべきだ
+批判:多様な価値観を支持しながらも，その間で批判的な討論をすることで客観的な価値に接近しようとすることはあり得る
+
+非普遍主義
+主張:あらゆる価値判断の妥当性は， 歴史的・文化的・経済的条件など、人間の意志と独立した偶然的な要素に依存している
+批判:逆に偶然的な要素(文脈 コンテキスト)さえ固定されれば，価値判断の妥当性は個人の判断によらない客観的なものになりうる
+
+## 狭義の相対主義の論拠
+
+最後に残った価値相対主義が狭義の相対主義であり，我々の真の論敵である．その主張は「いかなる価値判断も客観的な妥当性を持ち得えず，価値判断は原理上恣意的な問題である．」
 
 この主張の論拠は次のとおりである．
 
-1.  事実判断だけから価値判断は演繹できない(方法的二元論)
-
-2.  ゆえに価値判断Aを演繹するためには, ある価値判断Bを前提としなくてはいけない
-
-3.  価値判断Bも, なんらかの価値判断Cを前提とする必要があり, 価値判断Cも, 価値判断Dを前提とし... こうして無限後退に陥る
-
-4.  無限後退しないためには, どこかで誰もが前提として納得できる自己正当的な価値判断Qを見つける必要がある
-
+1.  事実判断だけから価値判断は演繹できない(方法的二元論) <sidenote-number></sidenote-number><sidenote>「~である」のような事実を記述する言明のみから，「~すべき」のような言明を論理的に導けるか否か．これを否定するのが二元論で，肯定するのが一元論．</sidenote>
+2.  ゆえに価値判断Aを演繹するためには，ある価値判断Bを前提としなくてはいけない
+3.  価値判断Bも，なんらかの価値判断Cを前提とする必要があり， 価値判断Cも， 価値判断Dを前提とし... こうして無限後退に陥る
+4.  無限後退しないためには，どこかで誰もが前提として納得できる自己正当的な価値判断Qを見つける必要がある
 5.  そのような価値判断Qは存在しない
-
 6.  ゆえに価値判断は確証=演繹されない
-
 7.  確証されないなら真理にはなりえない(確証可能性テーゼ)
+8.  ゆえに価値判断に客観的な真理は存在しない
 
-8.  ゆえに価値判断に客観的な真理は存在し得ない
+ここで7に使われている「与えられた判断の真理性を確証する方法が原理的に存在しないなら，その判断は客観的に真にはなりえない」という主張は確証可能性テーゼと呼ばれる．
 
-ここで7に使われている「与えられた判断の真理性を確証する方法が原理的にないなら, その判断は客観的に真にはなりえない」という主張は確証可能性テーゼと呼ばれる．
+## 確証可能性テーゼ批判
 
-#確証可能性テーゼ批判
+<small>\<確証可能性テーゼ\></small>
+確証可能でないならば，真理になりえない
 
 この確証可能性テーゼを相対主義者の論拠の肝とし，井上は確証可能性テーゼを拒否する．それには次の2つの方法がある．
 
-## 方法1
+### 方法1
 
-確証可能でないなら真理でない ⇔ 真理なら確証可能
+確証可能でないなら真理でない ⇔ 真理なら確証可能(対偶)
 
-より，もし確証可能性テーゼの信奉者がある命題Aの真理性を確信すれば, 真理Aが確証できることも確信することになる.確証とは演繹により命題を証明することであり，これは命題Aが不可謬であることを意味する．
+より，もし確証可能性テーゼの信奉者がある命題Aの真理性を確信すれば， 真理Aが確証できることも確信することになる．確証とは演繹により命題を証明することだから，これは命題Aが不可謬であることを意味する．
 
-だから，もし誰かが自己の判断の真理性の確信すれば，それはそのまま「自己の判断の不可謬性の確信=独断」に繋がる．この意味で独断的絶対主義者と相対主義は同じ穴のムジナである．というのも，確証可能性テーゼを信じるもののうち，確信の可能性を信じる楽天家が絶対主義になり，確信には達し得ないと断念したペシミストが相対主義になるからである．判断の真理性の確信と，その可謬性を両立させる，すなわち「仮説」の概念を確立するためには，確証可能性テーゼを斥けなければならない．
+だから，もし誰かが自己の判断の真理性の確信すれば，それはそのまま「自己の判断の不可謬性の確信=独断」に繋がる．だから，真理性をひとたび確信できれば，それは不可謬性であることが確信できる．これは独断的な絶対主義者である．ということは，確証可能性テーゼを信じるもののうち，確信の可能性を信じる楽天家が絶対主義になり，確信には達し得ないと断念したペシミストが相対主義になることになる．判断の真理性の確信と，その可謬性を両立させる，すなわち「仮説」の概念を確立するためには，確証可能性テーゼを斥けなければならない．
 
-## 方法2
+### 方法2
 
-確証可能性テーゼは自己反駁的である．すなわち，もし確証可能性テーゼが正しいのならば，確証可能性テーゼそれ自体は，どのように確証されるのだろうか．そのような確証の方法はないから，このテーゼ自体，自身の主張の通り，客観的に真ではありえない．
+確証可能性テーゼは自己反駁的である．すなわち，もし確証可能性テーゼが正しいのならば，確証可能性テーゼという一つの価値判断は，それ自体どのように確証されるのだろうか．そのような確証の方法はないから，このテーゼ自体，自身の主張の通り，客観的に真ではありえない．
 
-# 感想
+## 追記 確証可能性テーゼ批判方法1への批判
 
-『共生と正義』は極めて論理的に書かれながら，そのウィットに富んだ表現や一見シニカルな，しかし熱い態度から，読むこと自体の喜び・楽しさを備えた一冊．
+井上の確証可能性テーゼにたいする反論，ひいては相対主義者への反論は上記のとおりだが，方法1については再批判の余地がある．井上は真理の確信と，可謬性を両立させる，仮説の概念を確立するために，確証可能性テーゼを斥ける必要があると主張するが，そうではない．これを以下で示す．しかし，結論としては，相対主義へ方法1とは別の方法で批判する．
 
-極めて論理的であるがゆえの難しさがあるので，頭がしっかり働いた状態で読むべき．しかし，これを読んでからというもの，本を読むと，それが平凡なレベルであれば，論理や構成のずさんさにイヤに気づくようになり，文句が出るようになってしまう．
+まず，真理の確信というときに，それは確信している・していないの1，0ではなく，連続的な，確率的な値をとる．特に経験的な命題については，それが価値判断であっても事実判断であっても完全な確信を抱くことはないだろう．経験命題は常に作業仮説であり，反駁される可能性があると信ずる人がほとんどだと思う．
 
-論理的に・批判的に・第一原理から，考える・主張するとはどういうことか，を正義を実例にとことん実践している．
+つまり経験命題の真理性への確信については0<確信<1となる．一方，確証可能性テーゼが主張しているのは，真理性への完全な確信=1になるのは，演繹されるときのみ，ということだろう．完全な演繹が行えるの，形而上学的命題，例えば論理形式の妥当性とか，数学の証明などであること，このような限定的な場合では，真理性を完全に確信するのは，確かに確証=演繹を構成したときだけだろうから，確証可能性テーゼは妥当なものだろう．
+
+以上から確証可能性テーゼを否定しなくても，仮説の概念は形成できる．つまり，0<確信<1のときは，確信が0または1に近づくほど仮説の確からしさが上がっていくとすればいい．経験命題については，それは決して1にはならないが，1にならないからといって主観的な恣意的なままであるわけではない．
+
+ならば，相対主義の論拠として確証可能性テーゼは使えない．議論の対象になっている正義などの価値判断の文脈においては(それどころか自然科学の領域でも，とにかく経験命題をあつかう領域であれば<sidenote-number></sidenote-number><sidenote>ここから方法的二元論を相対主義の論拠とすることも難しいことがわかる．なぜなら，事実判断に限定する自然科学の領域でも，0<確信<1となるのは，価値判断と同様であり，方法的二元論をもって，価値判断に特有の困難として相対主義を主張することができないからだ．</sidenote>)，先程指摘したとおり0<確信<1だから，確証可能性テーゼの意味するところが「完全に100%真理性を確信できるのは，演繹を得られるときのみ」ということなら，確証可能性テーゼはそもそも適応外なのである．誰も100%の真理性を追い求めてなどおらず，確信の割合を必要なだけ高めることをしているのであって，相対主義を主張したければ，どうやっても確信の程度を上げることができないことを，なんらかの論拠と共に示さなければいけないだろう．
+
+
+## 『共生の作法』について
+
+<span class="marginnote img-holder pb-10" >![共生の作法―会話としての正義 (現代自由学芸叢書) | 達夫, 井上 |本 | 通販 | Amazon](https://m.media-amazon.com/images/I/71e5YwoeViL.jpg){width=45% .shadow-lg }</span>
+
+『共生の作法』は極めて論理的に書かれながら，そのウィットに富んだ表現や一見シニカルな，しかし熱い態度から，読むこと自体の喜び・楽しさを備えた一冊．
+
+極めて論理的であるがゆえの難しさがあるので，頭がしっかり働いた状態で読むべき．これを読んでからというもの，本を読むと，それが平凡なレベルであれば，論理や構成のずさんさにイヤに気づくようになり，文句が出るようになってしまった．
+
+論理的に・批判的に・第一原理から，考える・主張するとはどういうことか，を正義を実例にとことん実践している．ここでは，相対主義への議論を取り扱ったが，本書の議論が最も白熱するのはエゴイズムとの対話の部分だろう．
 
 必ず読むべき本．必ず読むべき本．必ず読むべき本．
 
-## おまけ 確証可能性テーゼ批判批判
+## 関連
 
-井上の確証可能性テーゼにたいする反論は上記のとおりだが，方法1については反論の余地があるだろう．井上は真理の確信と，可謬性を両立させるために，確証可能性テーゼを斥ける必要があると主張するが，そうではないと思う．
-
-まず，真理の確信というときに，それは確信している・していないの1,0ではなく，連続的な，確率的な値をとる．特に経験的な命題については，完全な確信を抱くことはない．経験命題は常に作業仮説であり，反駁される可能性があると信ずる人がほとんどだと思う．この場合0<確信<1となる．一方，確証可能性テーゼが主張しているのは，完全な確信=1のときのみ客観的に真になる，ということだろう．完全な確信になるのは，形而上学の命題，例えば論理形式の妥当性とか，数学の証明などである．こういうときのみ，確証可能性テーゼが適応されるのであると考えれば，確証可能性テーゼは妥当なものに思われる．これを否定しなくても，議論の対象になっている正義や自然科学の文脈においては，先程指摘したとおり0<確信<1だから，確証可能性テーゼはそもそも適応外で，確信が1に近づくほど仮説の確からしさが上がっていく(しかし1には決してならない)ことと，確信が1になったときに確証可能性テーゼから不可謬性を確信することは両立しうることである．
-
-しかし，2のような問題については答えることが難しいだろう．
-
-
-
-# ボツ
-
-## その他の道徳論に関するもの
-
-アダム・スミスの道徳感情論の良いまとめが公開されている．スミスの共感を通じて道徳感情を得る，という点には全く同意する．
-
-https://ocw.kyoto-u.ac.jp/wp-content/uploads/2021/04/2010_tetsugakukisobunkaseminar-2_02-2.pdf
-
-普段づかいの倫理学　正義・愛・自由
-
-
-
+- アダム・スミスの[道徳感情論の良いまとめ](https://ocw.kyoto-u.ac.jp/wp-content/uploads/2021/04/2010_tetsugakukisobunkaseminar-2_02-2.pdf)
