--- a/src/guide/computer/コンピュータ1.md
+++ b/src/guide/computer/コンピュータ1.md
@@ -123,6 +123,7 @@ A命令(adress命令) 0vvv vvvv vvvv vvvv
 これは，最上位のbitは0として，残りの15bitで，メモリのアドレスを表現する．
 
 ![](/img/memory.jpg)
+![image コンピュータ1の図を参照]()
 
 C命令(compute命令) 111a cccc ccdd djjj
 
