--- a/src/guide/computer/コンピュータ大まかな流れ.md
+++ b/src/guide/computer/コンピュータ大まかな流れ.md
@@ -1,3 +1,42 @@
+## コンピュータ
+
+1. メモリの読み書き
+2. 四則演算と計算結果の保存
+3. 条件分岐
+
+具体的にはA命令(Aレジスタに値を格納)とC命令(M,A,Dの計算，保存場所，jump)に対応するアセンブリ言語
+
+これを実現する論理回路，順序回路，機械語，CPUとメモリの実装
+
+OSへのモチベーション(文字出力，ファイルの読み込み，複数のプログラムを走らせる，仮想メモリにしたい)
+=> プロセス(動作中のプログラム)，ファイル(全てをファイルとしてあつかう)，ストリーム(仮想的なI/O，ファイルでもネットワークでも)
+bash，C言語の例とともに．
+ユーザー管理はおまけ程度に
+http://uralowl.my.coocan.jp/unix/job/UNIX/tutorial/user.html
+
+
+## インターネット
+
+リンク層:近くのやつに渡す 
+インターネット層:遠くのやつに渡す IP 
+トランスポート層: 正しいデータをアプリケーション層に渡す(渡しっぱなしにしない 誤りがあれば再送してもらう )
+アプリケーション層:
+に分けて，モチベーションとともに説明
+
+アプリケーション層は，HTTPを詳しく．
+HTML,CSS,javascriptはマジコードで，バックエンドは擬似コードで
+
+## 計算
+形式言語と対応するオートマトンの表
+
+
+## プログラムTips 書かなくてもいい
+
+関数型，OOP，テスト，ドメイン駆動，リファクタリングとかの話
+
+
+
+
 # やるべきこと
 
 google driveに追加した画像参照
